--- a/client/public/locales/kn/common.json
+++ b/client/public/locales/kn/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ಡ್ಯಾಶ್‌ಬೋರ್ಡ್",
-    "classes": "ತರಗತಿಗಳು",
-    "myClasses": "ನನ್ನ ತರಗತಿಗಳು",
-    "manageUsers": "ಬಳಕೆದಾರರ ನಿರ್ವಹಣೆ",
-    "labsPCs": "ಲ್ಯಾಬ್‌ಗಳು & PCಗಳು",
-    "assignments": "ನಿಯೋಜನೆಗಳು",
-    "assignedWork": "ನಿಯೋಜಿತ ಕೆಲಸ",
-    "reviewSubmissions": "ಸಲ್ಲಿಕೆಗಳನ್ನು ಪರಿಶೀಲಿಸಿ",
-    "review": "ಪರಿಶೀಲನೆ",
-    "documents": "ದಾಖಲೆಗಳು",
-    "sharedDocs": "ಹಂಚಿಕೊಂಡ ದಾಖಲೆಗಳು",
-    "grades": "ಗ್ರೇಡ್‌ಗಳು",
-    "myGrades": "ನನ್ನ ಗ್ರೇಡ್‌ಗಳು",
-    "viva": "ಮೌಖಿಕ",
-    "whiteboard": "ವೈಟ್‌ಬೋರ್ಡ್",
-    "liveSessions": "ಲೈವ್ ಅವಧಿಗಳು",
-    "liveBoard": "ಲೈವ್ ಬೋರ್ಡ್",
-    "activityLogs": "ಚಟುವಟಿಕೆ ದಾಖಲೆಗಳು",
-    "tickets": "ಟಿಕೆಟ್‌ಗಳು",
-    "reportIssue": "ಸಮಸ್ಯೆ ವರದಿ ಮಾಡಿ",
-    "schoolProfile": "ಶಾಲಾ ಪ್ರೊಫೈಲ್",
-    "reports": "ವರದಿಗಳು",
-    "settings": "ಸೆಟ್ಟಿಂಗ್‌ಗಳು",
-    "mySubmissions": "ನನ್ನ ಸಲ್ಲಿಕೆಗಳು",
-    "myWork": "ನಿಯೋಜಿತ ಕೆಲಸ"
-  },
-  "common": {
-    "save": "ಉಳಿಸು",
-    "cancel": "ರದ್ದುಮಾಡು",
-    "edit": "ಸಂಪಾದಿಸು",
-    "delete": "ಅಳಿಸು",
-    "submit": "ಸಲ್ಲಿಸು",
-    "search": "ಹುಡುಕು",
-    "filter": "ಫಿಲ್ಟರ್",
-    "loading": "ಲೋಡ್ ಆಗುತ್ತಿದೆ...",
-    "noData": "ಡೇಟಾ ಲಭ್ಯವಿಲ್ಲ",
-    "confirm": "ದೃಢೀಕರಿಸು",
-    "close": "ಮುಚ್ಚು",
-    "add": "ಸೇರಿಸು",
-    "remove": "ತೆಗೆದುಹಾಕು",
-    "upload": "ಅಪ್‌ಲೋಡ್",
-    "download": "ಡೌನ್‌ಲೋಡ್",
-    "view": "ವೀಕ್ಷಿಸು",
-    "back": "ಹಿಂದೆ",
-    "next": "ಮುಂದೆ",
-    "previous": "ಹಿಂದಿನ",
-    "yes": "ಹೌದು",
-    "no": "ಇಲ್ಲ",
-    "all": "ಎಲ್ಲಾ",
-    "active": "ಸಕ್ರಿಯ",
-    "inactive": "ನಿಷ್ಕ್ರಿಯ",
-    "status": "ಸ್ಥಿತಿ",
-    "actions": "ಕ್ರಿಯೆಗಳು",
-    "date": "ದಿನಾಂಕ",
-    "time": "ಸಮಯ",
-    "name": "ಹೆಸರು",
-    "description": "ವಿವರಣೆ",
-    "type": "ಪ್ರಕಾರ",
-    "email": "ಇಮೇಲ್",
-    "phone": "ಫೋನ್",
-    "address": "ವಿಳಾಸ",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "ಸೈನ್ ಇನ್",
-    "logout": "ಲಾಗ್‌ಔಟ್",
-    "email": "ಇಮೇಲ್ ವಿಳಾಸ",
-    "password": "ಪಾಸ್‌ವರ್ಡ್",
-    "rememberMe": "ನನ್ನನ್ನು ನೆನಪಿಡಿ",
-    "forgotPassword": "ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಿರಾ?",
-    "noAccount": "ಖಾತೆ ಇಲ್ಲವೇ?",
-    "signUp": "ಸೈನ್ ಅಪ್",
-    "signingIn": "ಸೈನ್ ಇನ್ ಆಗುತ್ತಿದೆ...",
-    "welcome": "ಮತ್ತೆ ಸ್ವಾಗತ!",
-    "demoCredentials": "ಡೆಮೊ ರುಜುವಾತುಗಳು",
-    "firstTimeLogin": "ಮೊದಲ ಬಾರಿಯೇ? PIN ಬಳಸಿ",
-    "usePassword": "ಪಾಸ್‌ವರ್ಡ್ ಬಳಸಿ",
-    "pin": "6-ಅಂಕಿ PIN",
-    "verifyPin": "PIN ಪರಿಶೀಲಿಸಿ",
-    "setPassword": "ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ",
-    "confirmPassword": "ಪಾಸ್‌ವರ್ಡ್ ದೃಢೀಕರಿಸಿ",
-    "verifying": "ಪರಿಶೀಲಿಸುತ್ತಿದೆ...",
-    "settingUp": "ಸೆಟ್ ಅಪ್ ಆಗುತ್ತಿದೆ...",
-    "setPasswordLogin": "ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ ಮತ್ತು ಲಾಗಿನ್ ಮಾಡಿ",
-    "enterPinFromTeacher": "ಶಿಕ್ಷಕರಿಂದ ಪಡೆದ PIN ನಮೂದಿಸಿ",
-    "academicSession": "ಶೈಕ್ಷಣಿಕ ಅವಧಿ",
-    "noSessions": "ಯಾವುದೇ ಅವಧಿಗಳಿಲ್ಲ",
-    "current": "ಪ್ರಸ್ತುತ",
-    "pinVerified": "PIN ಪರಿಶೀಲಿಸಲಾಗಿದೆ! ನಿಮ್ಮ ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ."
-  },
-  "language": {
-    "selectLanguage": "ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
-    "indianLanguages": "ಭಾರತೀಯ ಭಾಷೆಗಳು",
-    "internationalLanguages": "ಅಂತರರಾಷ್ಟ್ರೀಯ ಭಾಷೆಗಳು"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "ಯೂನಿಫೈಡ್ ಲ್ಯಾಬ್ ರೆಕಾರ್ಡ್ಸ್"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "ಯೂನಿಫೈಡ್ ಲ್ಯಾಬ್ ರೆಕಾರ್ಡ್ ಮ್ಯಾನೇಜ್‌ಮೆಂಟ್ ಸಿಸ್ಟಮ್",
-    "features": {
-      "multiLanguage": "ಬಹು-ಭಾಷಾ ಬೆಂಬಲ",
-      "onlineViva": "ಆನ್‌ಲೈನ್ ವೈವಾ ಸಿಸ್ಟಮ್",
-      "realTimeGrading": "ರಿಯಲ್-ಟೈಮ್ ಗ್ರೇಡಿಂಗ್",
-      "comprehensiveReports": "ಸಮಗ್ರ ವರದಿಗಳು"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "ಗುರಿ",
+    "allStatus": "ಎಲ್ಲಾ ಸ್ಥಿತಿ",
+    "apparatus": "ಉಪಕರಣ",
+    "archived": "ಆರ್ಕೈವ್ ಮಾಡಲಾಗಿದೆ",
+    "assignTo": "ನಿಯೋಜಿಸಿ",
+    "assignmentType": "ಪ್ರಕಾರ",
+    "attachments": "ಲಗತ್ತುಗಳು",
+    "createAssignment": "ನಿಯೋಜನೆಯನ್ನು ರಚಿಸಿ",
+    "createFirst": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಮೊದಲ ನಿಯೋಜನೆಯನ್ನು ರಚಿಸಿ.",
+    "created": "ರಚಿಸಲಾಗಿದೆ",
+    "deleteAssignment": "ನಿಯೋಜನೆಯನ್ನು ಅಳಿಸಿ",
+    "deleteConfirm": "ನೀವು ಇದನ್ನು ಅಳಿಸಲು ಖಚಿತವಾಗಿ ಬಯಸುವಿರಾ? ಈ ಕ್ರಿಯೆಯನ್ನು ರದ್ದುಗೊಳಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ.",
+    "draft": "ಡ್ರಾಫ್ಟ್",
+    "dueDate": "ಅಂತಿಮ ದಿನಾಂಕ",
+    "experimentNumber": "ಪ್ರಯೋಗ #",
+    "instructions": "ಸೂಚನೆಗಳು",
+    "maxMarks": "ಮ್ಯಾಕ್ಸ್ ಮಾರ್ಕ್ಸ್",
+    "noAssignmentsFound": "ಯಾವುದೇ ಕಾರ್ಯಯೋಜನೆಗಳು ಕಂಡುಬಂದಿಲ್ಲ.",
+    "noAssignmentsYet": "ನಿಮಗೆ ಇನ್ನೂ ಯಾವುದೇ ಕಾರ್ಯಯೋಜನೆಗಳನ್ನು ನಿಯೋಜಿಸಲಾಗಿಲ್ಲ.",
+    "observation": "ವೀಕ್ಷಣೆ",
+    "practicalNumber": "ಪ್ರಾಯೋಗಿಕ #"
   }
 }
