--- a/client/public/locales/mr/common.json
+++ b/client/public/locales/mr/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "डॅशबोर्ड",
-    "classes": "वर्ग",
-    "myClasses": "माझे वर्ग",
-    "manageUsers": "वापरकर्ते व्यवस्थापन",
-    "labsPCs": "प्रयोगशाळा आणि पीसी",
-    "assignments": "असाइनमेंट",
-    "assignedWork": "नियुक्त केलेले काम",
-    "reviewSubmissions": "सबमिशन तपासा",
-    "review": "पुनरावलोकन",
-    "documents": "कागदपत्रे",
-    "sharedDocs": "शेअर केलेले दस्तऐवज",
-    "grades": "ग्रेड",
-    "myGrades": "माझे ग्रेड",
-    "viva": "तोंडी परीक्षा",
-    "whiteboard": "व्हाईटबोर्ड",
-    "liveSessions": "लाइव्ह सत्र",
-    "liveBoard": "लाइव्ह बोर्ड",
-    "activityLogs": "क्रियाकलाप लॉग",
-    "tickets": "तिकीट",
-    "reportIssue": "समस्या नोंदवा",
-    "schoolProfile": "शाळा प्रोफाइल",
-    "reports": "अहवाल",
-    "settings": "सेटिंग्ज",
-    "mySubmissions": "माझे सबमिशन",
-    "myWork": "नियुक्त केलेले काम"
-  },
-  "common": {
-    "save": "जतन करा",
-    "cancel": "रद्द करा",
-    "edit": "संपादित करा",
-    "delete": "हटवा",
-    "submit": "सबमिट करा",
-    "search": "शोधा",
-    "filter": "फिल्टर",
-    "loading": "लोड होत आहे...",
-    "noData": "डेटा उपलब्ध नाही",
-    "confirm": "पुष्टी करा",
-    "close": "बंद करा",
-    "add": "जोडा",
-    "remove": "काढा",
-    "upload": "अपलोड करा",
-    "download": "डाउनलोड करा",
-    "view": "पहा",
-    "back": "मागे",
-    "next": "पुढे",
-    "previous": "मागील",
-    "yes": "हो",
-    "no": "नाही",
-    "all": "सर्व",
-    "active": "सक्रिय",
-    "inactive": "निष्क्रिय",
-    "status": "स्थिती",
-    "actions": "क्रिया",
-    "date": "तारीख",
-    "time": "वेळ",
-    "name": "नाव",
-    "description": "वर्णन",
-    "type": "प्रकार",
-    "email": "ईमेल",
-    "phone": "फोन",
-    "address": "पत्ता",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "साइन इन करा",
-    "logout": "लॉग आउट",
-    "email": "ईमेल पत्ता",
-    "password": "पासवर्ड",
-    "rememberMe": "मला लक्षात ठेवा",
-    "forgotPassword": "पासवर्ड विसरलात?",
-    "noAccount": "खाते नाही?",
-    "signUp": "साइन अप",
-    "signingIn": "साइन इन होत आहे...",
-    "welcome": "परत स्वागत!",
-    "demoCredentials": "डेमो क्रेडेंशियल्स",
-    "firstTimeLogin": "पहिल्यांदा? पिन वापरा",
-    "usePassword": "पासवर्ड वापरा",
-    "pin": "6-अंकी पिन",
-    "verifyPin": "पिन सत्यापित करा",
-    "setPassword": "पासवर्ड सेट करा",
-    "confirmPassword": "पासवर्ड पुष्टी करा",
-    "verifying": "सत्यापित होत आहे...",
-    "settingUp": "सेट अप होत आहे...",
-    "setPasswordLogin": "पासवर्ड सेट करा आणि लॉगिन करा",
-    "enterPinFromTeacher": "शिक्षकांकडून मिळालेला पिन टाका",
-    "academicSession": "शैक्षणिक सत्र",
-    "noSessions": "कोणतेही सत्र नाही",
-    "current": "वर्तमान",
-    "pinVerified": "पिन सत्यापित! आपला पासवर्ड सेट करा."
-  },
-  "language": {
-    "selectLanguage": "भाषा निवडा",
-    "indianLanguages": "भारतीय भाषा",
-    "internationalLanguages": "आंतरराष्ट्रीय भाषा"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "युनिफाइड लॅब रेकॉर्ड्स"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "युनिफाइड लॅब रेकॉर्ड मॅनेजमेंट सिस्टम",
-    "features": {
-      "multiLanguage": "बहु-भाषा समर्थन",
-      "onlineViva": "ऑनलाइन व्हायवा सिस्टम",
-      "realTimeGrading": "रिअल-टाइम ग्रेडिंग",
-      "comprehensiveReports": "सर्वसमावेशक अहवाल"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "लक्ष्य",
+    "allStatus": "सर्व स्थिती",
+    "apparatus": "उपकरणे",
+    "archived": "संग्रहित",
+    "assignTo": "नियुक्त करा",
+    "assignmentType": "प्रकार",
+    "attachments": "संलग्नक",
+    "createAssignment": "असाइनमेंट तयार करा",
+    "createFirst": "सुरुवात करण्यासाठी तुमचा पहिला असाइनमेंट तयार करा.",
+    "created": "तयार केले",
+    "deleteAssignment": "असाइनमेंट हटवा",
+    "deleteConfirm": "तुम्हाला हे नक्की हटवायचे आहे का? ही क्रिया पूर्ववत करता येणार नाही.",
+    "draft": "मसुदा",
+    "dueDate": "देय तारीख",
+    "experimentNumber": "प्रयोग #",
+    "instructions": "सूचना",
+    "maxMarks": "कमाल गुण",
+    "noAssignmentsFound": "असाइनमेंट सापडले नाहीत.",
+    "noAssignmentsYet": "तुम्हाला अजून कोणतेही काम देण्यात आलेले नाही.",
+    "observation": "निरीक्षण",
+    "practicalNumber": "व्यावहारिक #"
   }
 }
