--- a/client/public/locales/ne/common.json
+++ b/client/public/locales/ne/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ड्यासबोर्ड",
-    "classes": "कक्षाहरू",
-    "myClasses": "मेरो कक्षाहरू",
-    "manageUsers": "प्रयोगकर्ता व्यवस्थापन",
-    "labsPCs": "ल्याब र PC",
-    "assignments": "असाइनमेन्ट",
-    "assignedWork": "तोकिएको काम",
-    "reviewSubmissions": "पेशी समीक्षा",
-    "review": "समीक्षा",
-    "documents": "कागजातहरू",
-    "sharedDocs": "साझा कागजातहरू",
-    "grades": "ग्रेडहरू",
-    "myGrades": "मेरो ग्रेडहरू",
-    "viva": "मौखिक",
-    "whiteboard": "सेतो बोर्ड",
-    "liveSessions": "लाइभ सत्रहरू",
-    "liveBoard": "लाइभ बोर्ड",
-    "activityLogs": "गतिविधि लग",
-    "tickets": "टिकटहरू",
-    "reportIssue": "समस्या रिपोर्ट गर्नुहोस्",
-    "schoolProfile": "विद्यालय प्रोफाइल",
-    "reports": "रिपोर्टहरू",
-    "settings": "सेटिङहरू",
-    "mySubmissions": "मेरो पेशीहरू",
-    "myWork": "तोकिएको काम"
-  },
-  "common": {
-    "save": "बचत गर्नुहोस्",
-    "cancel": "रद्द गर्नुहोस्",
-    "edit": "सम्पादन गर्नुहोस्",
-    "delete": "मेट्नुहोस्",
-    "submit": "पेश गर्नुहोस्",
-    "search": "खोज्नुहोस्",
-    "filter": "फिल्टर",
-    "loading": "लोड हुँदैछ...",
-    "noData": "कुनै डाटा उपलब्ध छैन",
-    "confirm": "पुष्टि गर्नुहोस्",
-    "close": "बन्द गर्नुहोस्",
-    "add": "थप्नुहोस्",
-    "remove": "हटाउनुहोस्",
-    "upload": "अपलोड",
-    "download": "डाउनलोड",
-    "view": "हेर्नुहोस्",
-    "back": "पछाडि",
-    "next": "अर्को",
-    "previous": "अघिल्लो",
-    "yes": "हो",
-    "no": "होइन",
-    "all": "सबै",
-    "active": "सक्रिय",
-    "inactive": "निष्क्रिय",
-    "status": "स्थिति",
-    "actions": "कार्यहरू",
-    "date": "मिति",
-    "time": "समय",
-    "name": "नाम",
-    "description": "विवरण",
-    "type": "प्रकार",
-    "email": "इमेल",
-    "phone": "फोन",
-    "address": "ठेगाना",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "साइन इन",
-    "logout": "लग आउट",
-    "email": "इमेल ठेगाना",
-    "password": "पासवर्ड",
-    "rememberMe": "मलाई सम्झनुहोस्",
-    "forgotPassword": "पासवर्ड बिर्सनुभयो?",
-    "noAccount": "खाता छैन?",
-    "signUp": "साइन अप",
-    "signingIn": "साइन इन हुँदैछ...",
-    "welcome": "फेरि स्वागत छ!",
-    "demoCredentials": "डेमो प्रमाणपत्र",
-    "firstTimeLogin": "पहिलो पटक? PIN प्रयोग गर्नुहोस्",
-    "usePassword": "पासवर्ड प्रयोग गर्नुहोस्",
-    "pin": "6-अंकको PIN",
-    "verifyPin": "PIN प्रमाणित गर्नुहोस्",
-    "setPassword": "पासवर्ड सेट गर्नुहोस्",
-    "confirmPassword": "पासवर्ड पुष्टि गर्नुहोस्",
-    "verifying": "प्रमाणित हुँदैछ...",
-    "settingUp": "सेट अप हुँदैछ...",
-    "setPasswordLogin": "पासवर्ड सेट गर्नुहोस् र लग इन गर्नुहोस्",
-    "enterPinFromTeacher": "शिक्षकबाट प्राप्त PIN दर्ता गर्नुहोस्",
-    "academicSession": "शैक्षिक सत्र",
-    "noSessions": "कुनै सत्र छैन",
-    "current": "हालको",
-    "pinVerified": "PIN प्रमाणित भयो! तपाईंको पासवर्ड सेट गर्नुहोस्।"
-  },
-  "language": {
-    "selectLanguage": "भाषा छान्नुहोस्",
-    "indianLanguages": "भारतीय भाषाहरू",
-    "internationalLanguages": "अन्तर्राष्ट्रिय भाषाहरू"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "युनिफाइड ल्याब रेकर्डहरू"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "युनिफाइड ल्याब रेकर्ड व्यवस्थापन प्रणाली",
-    "features": {
-      "multiLanguage": "बहु-भाषा समर्थन",
-      "onlineViva": "अनलाइन भाइभा प्रणाली",
-      "realTimeGrading": "वास्तविक-समय ग्रेडिङ",
-      "comprehensiveReports": "व्यापक प्रतिवेदनहरू"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "लक्ष्य",
+    "allStatus": "सबै स्थिति",
+    "apparatus": "उपकरण",
+    "archived": "अभिलेख गरिएको",
+    "assignTo": "तोक्नुहोस्",
+    "assignmentType": "प्रकारहरू",
+    "attachments": "संलग्नकहरू",
+    "createAssignment": "असाइनमेन्ट सिर्जना गर्नुहोस्",
+    "createFirst": "सुरु गर्न आफ्नो पहिलो असाइनमेन्ट सिर्जना गर्नुहोस्।",
+    "created": "सिर्जना गरियो",
+    "deleteAssignment": "असाइनमेन्ट मेटाउनुहोस्",
+    "deleteConfirm": "के तपाईं यसलाई मेटाउन निश्चित हुनुहुन्छ? यो कार्य पूर्ववत गर्न सकिँदैन।",
+    "draft": "मस्यौदा",
+    "dueDate": "म्याद मिति",
+    "experimentNumber": "प्रयोग #",
+    "instructions": "निर्देशन",
+    "maxMarks": "अधिकतम अंकहरू",
+    "noAssignmentsFound": "कुनै असाइनमेन्ट भेटिएन",
+    "noAssignmentsYet": "तपाईंलाई अहिलेसम्म कुनै पनि असाइनमेन्ट तोकिएको छैन।",
+    "observation": "अवलोकन",
+    "practicalNumber": "व्यावहारिक #"
   }
 }
