--- a/client/public/locales/ta/common.json
+++ b/client/public/locales/ta/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "டாஷ்போர்டு",
-    "classes": "வகுப்புகள்",
-    "myClasses": "என் வகுப்புகள்",
-    "manageUsers": "பயனர்களை நிர்வகி",
-    "labsPCs": "ஆய்வகங்கள் & PCகள்",
-    "assignments": "பணிகள்",
-    "assignedWork": "ஒதுக்கப்பட்ட வேலை",
-    "reviewSubmissions": "சமர்ப்பிப்புகளை ஆய்வு செய்",
-    "review": "ஆய்வு",
-    "documents": "ஆவணங்கள்",
-    "sharedDocs": "பகிரப்பட்ட ஆவணங்கள்",
-    "grades": "தரங்கள்",
-    "myGrades": "என் தரங்கள்",
-    "viva": "வாய்மொழி",
-    "whiteboard": "வெள்ளைப்பலகை",
-    "liveSessions": "நேரடி அமர்வுகள்",
-    "liveBoard": "நேரடி பலகை",
-    "activityLogs": "செயல்பாட்டு பதிவுகள்",
-    "tickets": "டிக்கெட்டுகள்",
-    "reportIssue": "சிக்கலைப் புகாரளி",
-    "schoolProfile": "பள்ளி சுயவிவரம்",
-    "reports": "அறிக்கைகள்",
-    "settings": "அமைப்புகள்",
-    "mySubmissions": "என் சமர்ப்பிப்புகள்",
-    "myWork": "ஒதுக்கப்பட்ட வேலை"
-  },
-  "common": {
-    "save": "சேமி",
-    "cancel": "ரத்து செய்",
-    "edit": "திருத்து",
-    "delete": "நீக்கு",
-    "submit": "சமர்ப்பி",
-    "search": "தேடு",
-    "filter": "வடிகட்டி",
-    "loading": "ஏற்றுகிறது...",
-    "noData": "தரவு இல்லை",
-    "confirm": "உறுதிசெய்",
-    "close": "மூடு",
-    "add": "சேர்",
-    "remove": "நீக்கு",
-    "upload": "பதிவேற்று",
-    "download": "பதிவிறக்கு",
-    "view": "பார்",
-    "back": "பின்",
-    "next": "அடுத்து",
-    "previous": "முந்தைய",
-    "yes": "ஆம்",
-    "no": "இல்லை",
-    "all": "அனைத்தும்",
-    "active": "செயலில்",
-    "inactive": "செயலற்றது",
-    "status": "நிலை",
-    "actions": "செயல்கள்",
-    "date": "தேதி",
-    "time": "நேரம்",
-    "name": "பெயர்",
-    "description": "விளக்கம்",
-    "type": "வகை",
-    "email": "மின்னஞ்சல்",
-    "phone": "தொலைபேசி",
-    "address": "முகவரி",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "உள்நுழை",
-    "logout": "வெளியேறு",
-    "email": "மின்னஞ்சல் முகவரி",
-    "password": "கடவுச்சொல்",
-    "rememberMe": "என்னை நினைவில் வை",
-    "forgotPassword": "கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
-    "noAccount": "கணக்கு இல்லையா?",
-    "signUp": "பதிவு செய்",
-    "signingIn": "உள்நுழைகிறது...",
-    "welcome": "மீண்டும் வரவேற்கிறோம்!",
-    "demoCredentials": "டெமோ நற்சான்றிதழ்கள்",
-    "firstTimeLogin": "முதல் முறையா? PIN பயன்படுத்தவும்",
-    "usePassword": "கடவுச்சொல் பயன்படுத்தவும்",
-    "pin": "6-இலக்க PIN",
-    "verifyPin": "PIN சரிபார்க்கவும்",
-    "setPassword": "கடவுச்சொல் அமைக்கவும்",
-    "confirmPassword": "கடவுச்சொல் உறுதிப்படுத்தவும்",
-    "verifying": "சரிபார்க்கிறது...",
-    "settingUp": "அமைக்கிறது...",
-    "setPasswordLogin": "கடவுச்சொல் அமைத்து உள்நுழையவும்",
-    "enterPinFromTeacher": "ஆசிரியரிடமிருந்து பெற்ற PIN உள்ளிடவும்",
-    "academicSession": "கல்வி அமர்வு",
-    "noSessions": "அமர்வுகள் இல்லை",
-    "current": "தற்போதைய",
-    "pinVerified": "PIN சரிபார்க்கப்பட்டது! உங்கள் கடவுச்சொல்லை அமைக்கவும்."
-  },
-  "language": {
-    "selectLanguage": "மொழியை தேர்வு செய்",
-    "indianLanguages": "இந்திய மொழிகள்",
-    "internationalLanguages": "சர்வதேச மொழிகள்"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "யூனிஃபைட் லேப் ரெக்கார்ட்ஸ்"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "யூனிஃபைட் லேப் ரெக்கார்ட் மேனேஜ்மென்ட் சிஸ்டம்",
-    "features": {
-      "multiLanguage": "பல-மொழி ஆதரவு",
-      "onlineViva": "ஆன்லைன் வைவா சிஸ்டம்",
-      "realTimeGrading": "நிகழ்நேர தரமிடல்",
-      "comprehensiveReports": "முழுமையான அறிக்கைகள்"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "நோக்கம்",
+    "allStatus": "அனைத்து நிலை",
+    "apparatus": "கருவி",
+    "archived": "காப்பகப்படுத்தப்பட்டது",
+    "assignTo": "ஒதுக்கு",
+    "assignmentType": "வகை",
+    "attachments": "இணைப்புகள்",
+    "createAssignment": "வேலையை உருவாக்கு",
+    "createFirst": "தொடங்குவதற்கு உங்கள் முதல் வேலையை உருவாக்கவும்.",
+    "created": "உருவாக்கப்பட்டது",
+    "deleteAssignment": "ஒதுக்கீட்டை நீக்கு",
+    "deleteConfirm": "இதை நீக்க விரும்புகிறீர்களா? இந்த செயலை செயல்தவிர்க்க முடியாது.",
+    "draft": "வரைவு",
+    "dueDate": "நிலுவைத் தேதி",
+    "experimentNumber": "பரிசோதனை எண்",
+    "instructions": "வழிமுறைகள்",
+    "maxMarks": "அதிகபட்ச மதிப்பெண்கள்",
+    "noAssignmentsFound": "எந்தப் பணிகளும் கிடைக்கவில்லை.",
+    "noAssignmentsYet": "உங்களுக்கு இதுவரை எந்தப் பணிகளும் ஒதுக்கப்படவில்லை.",
+    "observation": "கவனிப்பு",
+    "practicalNumber": "நடைமுறை #"
   }
 }
