--- a/client/public/locales/te/common.json
+++ b/client/public/locales/te/common.json
@@ -1,302 +1,26 @@
 {
-  "nav": {
-    "dashboard": "డాష్‌బోర్డ్",
-    "classes": "తరగతులు",
-    "myClasses": "నా తరగతులు",
-    "manageUsers": "వినియోగదారుల నిర్వహణ",
-    "labsPCs": "ల్యాబ్‌లు & PCలు",
-    "assignments": "అసైన్‌మెంట్లు",
-    "assignedWork": "కేటాయించిన పని",
-    "reviewSubmissions": "సమర్పణలను సమీక్షించండి",
-    "review": "సమీక్ష",
-    "documents": "పత్రాలు",
-    "sharedDocs": "షేర్ చేసిన డాక్స్",
-    "grades": "గ్రేడ్‌లు",
-    "myGrades": "నా గ్రేడ్‌లు",
-    "viva": "వైవా",
-    "whiteboard": "వైట్‌బోర్డ్",
-    "liveSessions": "లైవ్ సెషన్లు",
-    "liveBoard": "లైవ్ బోర్డ్",
-    "activityLogs": "కార్యకలాప లాగ్‌లు",
-    "tickets": "టికెట్లు",
-    "reportIssue": "సమస్యను నివేదించండి",
-    "schoolProfile": "పాఠశాల ప్రొఫైల్",
-    "reports": "నివేదికలు",
-    "settings": "సెట్టింగ్‌లు",
-    "mySubmissions": "నా సమర్పణలు",
-    "myWork": "కేటాయించిన పని"
-  },
-  "common": {
-    "save": "సేవ్ చేయండి",
-    "cancel": "రద్దు చేయండి",
-    "edit": "సవరించండి",
-    "delete": "తొలగించండి",
-    "submit": "సమర్పించండి",
-    "search": "వెతకండి",
-    "filter": "ఫిల్టర్",
-    "loading": "లోడ్ అవుతోంది...",
-    "noData": "డేటా అందుబాటులో లేదు",
-    "confirm": "నిర్ధారించండి",
-    "close": "మూసివేయండి",
-    "add": "జోడించండి",
-    "remove": "తొలగించండి",
-    "upload": "అప్‌లోడ్",
-    "download": "డౌన్‌లోడ్",
-    "view": "చూడండి",
-    "back": "వెనుకకు",
-    "next": "తదుపరి",
-    "previous": "మునుపటి",
-    "yes": "అవును",
-    "no": "కాదు",
-    "all": "అన్నీ",
-    "active": "క్రియాశీలం",
-    "inactive": "క్రియారహితం",
-    "status": "స్థితి",
-    "actions": "చర్యలు",
-    "date": "తేదీ",
-    "time": "సమయం",
-    "name": "పేరు",
-    "description": "వివరణ",
-    "type": "రకం",
-    "email": "ఇమెయిల్",
-    "phone": "ఫోన్",
-    "address": "చిరునామా",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "సైన్ ఇన్",
-    "logout": "లాగ్‌అవుట్",
-    "email": "ఇమెయిల్ చిరునామా",
-    "password": "పాస్‌వర్డ్",
-    "rememberMe": "నన్ను గుర్తుంచుకో",
-    "forgotPassword": "పాస్‌వర్డ్ మర్చిపోయారా?",
-    "noAccount": "ఖాతా లేదా?",
-    "signUp": "సైన్ అప్",
-    "signingIn": "సైన్ ఇన్ అవుతోంది...",
-    "welcome": "తిరిగి స్వాగతం!",
-    "demoCredentials": "డెమో క్రెడెన్షియల్స్",
-    "firstTimeLogin": "మొదటిసారా? PINని ఉపయోగించండి",
-    "usePassword": "పాస్‌వర్డ్ ఉపయోగించండి",
-    "pin": "6-అంకెల PIN",
-    "verifyPin": "PIN ధృవీకరించండి",
-    "setPassword": "పాస్‌వర్డ్ సెట్ చేయండి",
-    "confirmPassword": "పాస్‌వర్డ్ నిర్ధారించండి",
-    "verifying": "ధృవీకరిస్తోంది...",
-    "settingUp": "సెట్ అప్ అవుతోంది...",
-    "setPasswordLogin": "పాస్‌వర్డ్ సెట్ చేసి లాగిన్ అవండి",
-    "enterPinFromTeacher": "టీచర్ నుండి పొందిన PIN ఎంటర్ చేయండి",
-    "academicSession": "అకడమిక్ సెషన్",
-    "noSessions": "సెషన్‌లు లేవు",
-    "current": "ప్రస్తుత",
-    "pinVerified": "PIN ధృవీకరించబడింది! మీ పాస్‌వర్డ్ సెట్ చేయండి."
-  },
-  "language": {
-    "selectLanguage": "భాషను ఎంచుకోండి",
-    "indianLanguages": "భారతీయ భాషలు",
-    "internationalLanguages": "అంతర్జాతీయ భాషలు"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "యూనిఫైడ్ ల్యాబ్ రికార్డ్స్"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "యూనిఫైడ్ ల్యాబ్ రికార్డ్ మేనేజ్‌మెంట్ సిస్టమ్",
-    "features": {
-      "multiLanguage": "బహుళ-భాషా మద్దతు",
-      "onlineViva": "ఆన్‌లైన్ వైవా సిస్టమ్",
-      "realTimeGrading": "రియల్-టైమ్ గ్రేడింగ్",
-      "comprehensiveReports": "సమగ్ర నివేదికలు"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "లక్ష్యం",
+    "allStatus": "అన్ని స్థితి",
+    "apparatus": "ఉపకరణం",
+    "archived": "ఆర్కైవ్ చేయబడింది",
+    "assignTo": "కేటాయించు",
+    "assignmentType": "రకం",
+    "attachments": "అటాచ్మెంట్లు",
+    "createAssignment": "అసైన్‌మెంట్‌ను సృష్టించండి",
+    "createFirst": "ప్రారంభించడానికి మీ మొదటి అసైన్‌మెంట్‌ను సృష్టించండి.",
+    "created": "సృష్టించబడింది",
+    "deleteAssignment": "అసైన్‌మెంట్‌ను తొలగించు",
+    "deleteConfirm": "మీరు దీన్ని ఖచ్చితంగా తొలగించాలనుకుంటున్నారా? ఈ చర్యను రద్దు చేయలేరు.",
+    "draft": "డ్రాఫ్ట్",
+    "dueDate": "గడువు తేదీ",
+    "experimentNumber": "ప్రయోగం #",
+    "instructions": "సూచనలు",
+    "maxMarks": "గరిష్ట మార్కులు",
+    "noAssignmentsFound": "అసైన్‌మెంట్‌లు ఏవీ కనుగొనబడలేదు",
+    "noAssignmentsYet": "మీకు ఇంకా ఏ అసైన్‌మెంట్‌లు కేటాయించబడలేదు.",
+    "observation": "పరిశీలన",
+    "practicalNumber": "ఆచరణాత్మకం #",
+    "procedure": "విధానం"
   }
 }
