--- a/client/public/locales/ur/common.json
+++ b/client/public/locales/ur/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ڈیش بورڈ",
-    "classes": "کلاسیں",
-    "myClasses": "میری کلاسیں",
-    "manageUsers": "صارف انتظام",
-    "labsPCs": "لیب اور پی سی",
-    "assignments": "اسائنمنٹس",
-    "assignedWork": "تفویض شدہ کام",
-    "reviewSubmissions": "جمع کرانے کا جائزہ",
-    "review": "جائزہ",
-    "documents": "دستاویزات",
-    "sharedDocs": "مشترکہ دستاویزات",
-    "grades": "گریڈز",
-    "myGrades": "میرے گریڈز",
-    "viva": "زبانی",
-    "whiteboard": "وائٹ بورڈ",
-    "liveSessions": "لائیو سیشنز",
-    "liveBoard": "لائیو بورڈ",
-    "activityLogs": "سرگرمی لاگ",
-    "tickets": "ٹکٹ",
-    "reportIssue": "مسئلہ رپورٹ کریں",
-    "schoolProfile": "اسکول پروفائل",
-    "reports": "رپورٹس",
-    "settings": "ترتیبات",
-    "mySubmissions": "میری جمع کرائی گئیں",
-    "myWork": "تفویض شدہ کام"
-  },
-  "common": {
-    "save": "محفوظ کریں",
-    "cancel": "منسوخ کریں",
-    "edit": "ترمیم کریں",
-    "delete": "حذف کریں",
-    "submit": "جمع کرائیں",
-    "search": "تلاش کریں",
-    "filter": "فلٹر",
-    "loading": "لوڈ ہو رہا ہے...",
-    "noData": "کوئی ڈیٹا دستیاب نہیں",
-    "confirm": "تصدیق کریں",
-    "close": "بند کریں",
-    "add": "شامل کریں",
-    "remove": "ہٹائیں",
-    "upload": "اپ لوڈ",
-    "download": "ڈاؤن لوڈ",
-    "view": "دیکھیں",
-    "back": "واپس",
-    "next": "اگلا",
-    "previous": "پچھلا",
-    "yes": "ہاں",
-    "no": "نہیں",
-    "all": "سب",
-    "active": "فعال",
-    "inactive": "غیر فعال",
-    "status": "حیثیت",
-    "actions": "اعمال",
-    "date": "تاریخ",
-    "time": "وقت",
-    "name": "نام",
-    "description": "تفصیل",
-    "type": "قسم",
-    "email": "ای میل",
-    "phone": "فون",
-    "address": "پتہ",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "سائن ان",
-    "logout": "لاگ آؤٹ",
-    "email": "ای میل پتہ",
-    "password": "پاس ورڈ",
-    "rememberMe": "مجھے یاد رکھیں",
-    "forgotPassword": "پاس ورڈ بھول گئے؟",
-    "noAccount": "اکاؤنٹ نہیں ہے؟",
-    "signUp": "سائن اپ",
-    "signingIn": "سائن ان ہو رہا ہے...",
-    "welcome": "واپسی پر خوش آمدید!",
-    "demoCredentials": "ڈیمو اسناد",
-    "firstTimeLogin": "پہلی بار؟ PIN استعمال کریں",
-    "usePassword": "پاس ورڈ استعمال کریں",
-    "pin": "6-ہندسوں کا PIN",
-    "verifyPin": "PIN تصدیق کریں",
-    "setPassword": "پاس ورڈ سیٹ کریں",
-    "confirmPassword": "پاس ورڈ کی تصدیق کریں",
-    "verifying": "تصدیق ہو رہی ہے...",
-    "settingUp": "سیٹ اپ ہو رہا ہے...",
-    "setPasswordLogin": "پاس ورڈ سیٹ کریں اور لاگ ان کریں",
-    "enterPinFromTeacher": "استاد سے ملا PIN درج کریں",
-    "academicSession": "تعلیمی سیشن",
-    "noSessions": "کوئی سیشن نہیں",
-    "current": "موجودہ",
-    "pinVerified": "PIN تصدیق ہو گئی! اپنا پاس ورڈ سیٹ کریں۔"
-  },
-  "language": {
-    "selectLanguage": "زبان منتخب کریں",
-    "indianLanguages": "بھارتی زبانیں",
-    "internationalLanguages": "بین الاقوامی زبانیں"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "یونیفائیڈ لیب ریکارڈز"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "یونیفائیڈ لیب ریکارڈ مینجمنٹ سسٹم",
-    "features": {
-      "multiLanguage": "کثیر لسانی معاونت",
-      "onlineViva": "آن لائن وائیوا سسٹم",
-      "realTimeGrading": "ریئل ٹائم گریڈنگ",
-      "comprehensiveReports": "جامع رپورٹس"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "مقصد",
+    "allStatus": "تمام حیثیت",
+    "apparatus": "اپریٹس",
+    "archived": "محفوظ شدہ",
+    "assignTo": "کو تفویض کریں۔",
+    "assignmentType": "قسم",
+    "attachments": "منسلکات",
+    "createAssignment": "اسائنمنٹ بنائیں",
+    "createFirst": "شروع کرنے کے لیے اپنی پہلی اسائنمنٹ بنائیں۔",
+    "created": "بنایا",
+    "deleteAssignment": "اسائنمنٹ کو حذف کریں۔",
+    "deleteConfirm": "کیا آپ واقعی اسے حذف کرنا چاہتے ہیں؟ اس کارروائی کو کالعدم نہیں کیا جا سکتا۔",
+    "maxMarks": "زیادہ سے زیادہ مارکس",
+    "draft": "مسودہ",
+    "dueDate": "مقررہ تاریخ",
+    "experimentNumber": "تجربہ #",
+    "instructions": "ہدایات",
+    "noAssignmentsFound": "کوئی اسائنمنٹس نہیں ملے",
+    "noAssignmentsYet": "آپ کو ابھی تک کوئی تفویض نہیں کیا گیا ہے۔",
+    "observation": "مشاہدہ",
+    "practicalNumber": "عملی #"
   }
 }
