--- a/client/public/locales/bn/common.json
+++ b/client/public/locales/bn/common.json
@@ -1,302 +1,26 @@
 {
-  "nav": {
-    "dashboard": "ড্যাশবোর্ড",
-    "classes": "ক্লাস",
-    "myClasses": "আমার ক্লাস",
-    "manageUsers": "ব্যবহারকারী পরিচালনা",
-    "labsPCs": "ল্যাব ও পিসি",
-    "assignments": "অ্যাসাইনমেন্ট",
-    "assignedWork": "বরাদ্দ কাজ",
-    "reviewSubmissions": "জমা পর্যালোচনা",
-    "review": "পর্যালোচনা",
-    "documents": "নথি",
-    "sharedDocs": "শেয়ার করা নথি",
-    "grades": "গ্রেড",
-    "myGrades": "আমার গ্রেড",
-    "viva": "ভাইভা",
-    "whiteboard": "হোয়াইটবোর্ড",
-    "liveSessions": "লাইভ সেশন",
-    "liveBoard": "লাইভ বোর্ড",
-    "activityLogs": "কার্যকলাপ লগ",
-    "tickets": "টিকেট",
-    "reportIssue": "সমস্যা রিপোর্ট",
-    "schoolProfile": "স্কুল প্রোফাইল",
-    "reports": "রিপোর্ট",
-    "settings": "সেটিংস",
-    "mySubmissions": "আমার জমা",
-    "myWork": "বরাদ্দ কাজ"
-  },
-  "common": {
-    "save": "সংরক্ষণ",
-    "cancel": "বাতিল",
-    "edit": "সম্পাদনা",
-    "delete": "মুছুন",
-    "submit": "জমা দিন",
-    "search": "অনুসন্ধান",
-    "filter": "ফিল্টার",
-    "loading": "লোড হচ্ছে...",
-    "noData": "কোন তথ্য নেই",
-    "confirm": "নিশ্চিত",
-    "close": "বন্ধ",
-    "add": "যোগ করুন",
-    "remove": "সরান",
-    "upload": "আপলোড",
-    "download": "ডাউনলোড",
-    "view": "দেখুন",
-    "back": "পিছনে",
-    "next": "পরবর্তী",
-    "previous": "আগের",
-    "yes": "হ্যাঁ",
-    "no": "না",
-    "all": "সব",
-    "active": "সক্রিয়",
-    "inactive": "নিষ্ক্রিয়",
-    "status": "অবস্থা",
-    "actions": "কার্যক্রম",
-    "date": "তারিখ",
-    "time": "সময়",
-    "name": "নাম",
-    "description": "বিবরণ",
-    "type": "ধরন",
-    "email": "ইমেইল",
-    "phone": "ফোন",
-    "address": "ঠিকানা",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "লগইন",
-    "logout": "লগআউট",
-    "email": "ইমেইল ঠিকানা",
-    "password": "পাসওয়ার্ড",
-    "rememberMe": "আমাকে মনে রাখুন",
-    "forgotPassword": "পাসওয়ার্ড ভুলে গেছেন?",
-    "noAccount": "অ্যাকাউন্ট নেই?",
-    "signUp": "সাইন আপ",
-    "signingIn": "লগইন হচ্ছে...",
-    "welcome": "স্বাগতম!",
-    "demoCredentials": "ডেমো ক্রেডেনশিয়াল",
-    "firstTimeLogin": "প্রথমবার? পিন ব্যবহার করুন",
-    "usePassword": "পাসওয়ার্ড ব্যবহার করুন",
-    "pin": "৬-সংখ্যার পিন",
-    "verifyPin": "পিন যাচাই করুন",
-    "setPassword": "পাসওয়ার্ড সেট করুন",
-    "confirmPassword": "পাসওয়ার্ড নিশ্চিত করুন",
-    "verifying": "যাচাই হচ্ছে...",
-    "settingUp": "সেট আপ হচ্ছে...",
-    "setPasswordLogin": "পাসওয়ার্ড সেট করুন এবং লগইন করুন",
-    "enterPinFromTeacher": "শিক্ষকের কাছ থেকে প্রাপ্ত পিন লিখুন",
-    "academicSession": "একাডেমিক সেশন",
-    "noSessions": "কোন সেশন নেই",
-    "current": "বর্তমান",
-    "pinVerified": "পিন যাচাই হয়েছে! আপনার পাসওয়ার্ড সেট করুন।"
-  },
-  "language": {
-    "selectLanguage": "ভাষা নির্বাচন",
-    "indianLanguages": "ভারতীয় ভাষা",
-    "internationalLanguages": "আন্তর্জাতিক ভাষা"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "ইউনিফাইড ল্যাব রেকর্ডস"
-  },
-  "login": {
-    "title": "ইউএলআরএমএস",
-    "subtitle": "ইউনিফাইড ল্যাব রেকর্ড ম্যানেজমেন্ট সিস্টেম",
-    "features": {
-      "multiLanguage": "বহু-ভাষা সমর্থন",
-      "onlineViva": "অনলাইন ভাইভা সিস্টেম",
-      "realTimeGrading": "রিয়েল-টাইম গ্রেডিং",
-      "comprehensiveReports": "বিস্তারিত রিপোর্ট"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "লক্ষ্য",
+    "allStatus": "সকল অবস্থা",
+    "apparatus": "যন্ত্রপাতি",
+    "archived": "সংরক্ষণাগারভুক্ত",
+    "assignTo": "বরাদ্দ করুন",
+    "assignmentType": "আদর্শ",
+    "attachments": "সংযুক্তি",
+    "createAssignment": "অ্যাসাইনমেন্ট তৈরি করুন",
+    "createFirst": "শুরু করার জন্য আপনার প্রথম অ্যাসাইনমেন্ট তৈরি করুন।",
+    "created": "তৈরি করা হয়েছে",
+    "deleteAssignment": "অ্যাসাইনমেন্ট মুছুন",
+    "deleteConfirm": "আপনি কি নিশ্চিত যে আপনি এটি মুছে ফেলতে চান? এই ক্রিয়াটি পূর্বাবস্থায় ফেরানো যাবে না।",
+    "draft": "খসড়া",
+    "dueDate": "শেষ তারিখ",
+    "experimentNumber": "পরীক্ষা #",
+    "instructions": "নির্দেশনা",
+    "maxMarks": "সর্বোচ্চ চিহ্ন",
+    "noAssignmentsFound": "কোনও অ্যাসাইনমেন্ট পাওয়া যায়নি",
+    "noAssignmentsYet": "তোমাকে এখনও কোন অ্যাসাইনমেন্ট দেওয়া হয়নি।",
+    "observation": "পর্যবেক্ষণ",
+    "practicalNumber": "ব্যবহারিক #",
+    "procedure": "পদ্ধতি"
   }
 }
