--- a/client/public/locales/es/common.json
+++ b/client/public/locales/es/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "Panel de control",
-    "classes": "Clases",
-    "myClasses": "Mis clases",
-    "manageUsers": "Gestionar usuarios",
-    "labsPCs": "Labs y PCs",
-    "assignments": "Tareas",
-    "assignedWork": "Trabajo asignado",
-    "reviewSubmissions": "Revisar entregas",
-    "review": "Revisar",
-    "documents": "Documentos",
-    "sharedDocs": "Docs compartidos",
-    "grades": "Calificaciones",
-    "myGrades": "Mis calificaciones",
-    "viva": "Oral",
-    "whiteboard": "Pizarra",
-    "liveSessions": "Sesiones en vivo",
-    "liveBoard": "Pizarra en vivo",
-    "activityLogs": "Registros de actividad",
-    "tickets": "Tickets",
-    "reportIssue": "Reportar problema",
-    "schoolProfile": "Perfil de la escuela",
-    "reports": "Informes",
-    "settings": "Configuración",
-    "mySubmissions": "Mis entregas",
-    "myWork": "Trabajo asignado"
-  },
-  "common": {
-    "save": "Guardar",
-    "cancel": "Cancelar",
-    "edit": "Editar",
-    "delete": "Eliminar",
-    "submit": "Enviar",
-    "search": "Buscar",
-    "filter": "Filtrar",
-    "loading": "Cargando...",
-    "noData": "No hay datos disponibles",
-    "confirm": "Confirmar",
-    "close": "Cerrar",
-    "add": "Añadir",
-    "remove": "Quitar",
-    "upload": "Subir",
-    "download": "Descargar",
-    "view": "Ver",
-    "back": "Atrás",
-    "next": "Siguiente",
-    "previous": "Anterior",
-    "yes": "Sí",
-    "no": "No",
-    "all": "Todos",
-    "active": "Activo",
-    "inactive": "Inactivo",
-    "status": "Estado",
-    "actions": "Acciones",
-    "date": "Fecha",
-    "time": "Hora",
-    "name": "Nombre",
-    "description": "Descripción",
-    "type": "Tipo",
-    "email": "Correo electrónico",
-    "phone": "Teléfono",
-    "address": "Dirección",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "Iniciar sesión",
-    "logout": "Cerrar sesión",
-    "email": "Correo electrónico",
-    "password": "Contraseña",
-    "rememberMe": "Recuérdame",
-    "forgotPassword": "¿Olvidaste la contraseña?",
-    "noAccount": "¿No tienes cuenta?",
-    "signUp": "Registrarse",
-    "signingIn": "Iniciando sesión...",
-    "welcome": "¡Bienvenido de vuelta!",
-    "demoCredentials": "Credenciales de demo",
-    "firstTimeLogin": "¿Primera vez? Use PIN",
-    "usePassword": "Usar contraseña",
-    "pin": "PIN de 6 dígitos",
-    "verifyPin": "Verificar PIN",
-    "setPassword": "Establecer contraseña",
-    "confirmPassword": "Confirmar contraseña",
-    "verifying": "Verificando...",
-    "settingUp": "Configurando...",
-    "setPasswordLogin": "Establecer contraseña e iniciar sesión",
-    "enterPinFromTeacher": "Ingrese el PIN recibido de su profesor",
-    "academicSession": "Sesión académica",
-    "noSessions": "Sin sesiones",
-    "current": "Actual",
-    "pinVerified": "¡PIN verificado! Establezca su contraseña."
-  },
-  "language": {
-    "selectLanguage": "Seleccionar idioma",
-    "indianLanguages": "Idiomas indios",
-    "internationalLanguages": "Idiomas internacionales"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "Registros de laboratorio unificados"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "Sistema Unificado de Gestión de Registros de Laboratorio",
-    "features": {
-      "multiLanguage": "Soporte multilingüe",
-      "onlineViva": "Sistema de Viva en línea",
-      "realTimeGrading": "Calificación en tiempo real",
-      "comprehensiveReports": "Informes completos"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "Apuntar",
+    "allStatus": "Todos los estados",
+    "apparatus": "Aparato",
+    "archived": "Archivado",
+    "assignTo": "Asignar a",
+    "assignmentType": "Tipo",
+    "attachments": "Archivos adjuntos",
+    "createAssignment": "Crear tarea",
+    "createFirst": "Crea tu primera tarea para comenzar.",
+    "created": "Creado",
+    "deleteAssignment": "Eliminar asignación",
+    "deleteConfirm": "¿Seguro que quieres eliminar esto? Esta acción no se puede deshacer.",
+    "draft": "Borrador",
+    "dueDate": "Fecha de vencimiento",
+    "experimentNumber": "Experimento #",
+    "instructions": "Instrucciones",
+    "maxMarks": "Máximas calificaciones",
+    "noAssignmentsFound": "No se encontraron tareas",
+    "noAssignmentsYet": "Aún no se te han asignado tareas.",
+    "observation": "Observación",
+    "practicalNumber": "Práctico #"
   }
 }
