--- a/client/public/locales/fr/common.json
+++ b/client/public/locales/fr/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "Tableau de bord",
-    "classes": "Classes",
-    "myClasses": "Mes classes",
-    "manageUsers": "Gérer les utilisateurs",
-    "labsPCs": "Labos & PC",
-    "assignments": "Devoirs",
-    "assignedWork": "Travail assigné",
-    "reviewSubmissions": "Examiner les soumissions",
-    "review": "Examiner",
-    "documents": "Documents",
-    "sharedDocs": "Docs partagés",
-    "grades": "Notes",
-    "myGrades": "Mes notes",
-    "viva": "Oral",
-    "whiteboard": "Tableau blanc",
-    "liveSessions": "Sessions en direct",
-    "liveBoard": "Tableau en direct",
-    "activityLogs": "Journaux d'activité",
-    "tickets": "Tickets",
-    "reportIssue": "Signaler un problème",
-    "schoolProfile": "Profil de l'école",
-    "reports": "Rapports",
-    "settings": "Paramètres",
-    "mySubmissions": "Mes soumissions",
-    "myWork": "Travail assigné"
-  },
-  "common": {
-    "save": "Enregistrer",
-    "cancel": "Annuler",
-    "edit": "Modifier",
-    "delete": "Supprimer",
-    "submit": "Soumettre",
-    "search": "Rechercher",
-    "filter": "Filtrer",
-    "loading": "Chargement...",
-    "noData": "Aucune donnée disponible",
-    "confirm": "Confirmer",
-    "close": "Fermer",
-    "add": "Ajouter",
-    "remove": "Retirer",
-    "upload": "Télécharger",
-    "download": "Télécharger",
-    "view": "Voir",
-    "back": "Retour",
-    "next": "Suivant",
-    "previous": "Précédent",
-    "yes": "Oui",
-    "no": "Non",
-    "all": "Tous",
-    "active": "Actif",
-    "inactive": "Inactif",
-    "status": "Statut",
-    "actions": "Actions",
-    "date": "Date",
-    "time": "Heure",
-    "name": "Nom",
-    "description": "Description",
-    "type": "Type",
-    "email": "Email",
-    "phone": "Téléphone",
-    "address": "Adresse",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "Connexion",
-    "logout": "Déconnexion",
-    "email": "Adresse email",
-    "password": "Mot de passe",
-    "rememberMe": "Se souvenir de moi",
-    "forgotPassword": "Mot de passe oublié?",
-    "noAccount": "Pas de compte?",
-    "signUp": "S'inscrire",
-    "signingIn": "Connexion en cours...",
-    "welcome": "Bon retour!",
-    "demoCredentials": "Identifiants de démo",
-    "firstTimeLogin": "Première fois? Utilisez le PIN",
-    "usePassword": "Utiliser le mot de passe",
-    "pin": "PIN à 6 chiffres",
-    "verifyPin": "Vérifier le PIN",
-    "setPassword": "Définir le mot de passe",
-    "confirmPassword": "Confirmer le mot de passe",
-    "verifying": "Vérification...",
-    "settingUp": "Configuration...",
-    "setPasswordLogin": "Définir le mot de passe et se connecter",
-    "enterPinFromTeacher": "Entrez le PIN reçu de votre enseignant",
-    "academicSession": "Session académique",
-    "noSessions": "Pas de sessions",
-    "current": "Actuel",
-    "pinVerified": "PIN vérifié! Définissez votre mot de passe."
-  },
-  "language": {
-    "selectLanguage": "Sélectionner la langue",
-    "indianLanguages": "Langues indiennes",
-    "internationalLanguages": "Langues internationales"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "Registres de laboratoire unifiés"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "Système Unifié de Gestion des Registres de Laboratoire",
-    "features": {
-      "multiLanguage": "Support multilingue",
-      "onlineViva": "Système de Viva en ligne",
-      "realTimeGrading": "Notation en temps réel",
-      "comprehensiveReports": "Rapports complets"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
+    "aim": "But",
+    "allStatus": "Tous les statuts",
+    "apparatus": "Appareil",
+    "archived": "Archivé",
+    "assignTo": "Attribuer à",
+    "assignmentType": "Taper",
+    "attachments": "Pièces jointes",
+    "createAssignment": "Créer un devoir",
+    "createFirst": "Créez votre premier devoir pour commencer.",
+    "created": "Créé",
+    "deleteAssignment": "Supprimer la tâche",
+    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer ceci ? Cette action est irréversible.",
+    "draft": "Brouillon",
+    "dueDate": "Date d'échéance",
+    "experimentNumber": "Expérience #",
     "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
+    "maxMarks": "Max Marks",
+    "noAssignmentsFound": "Aucun devoir trouvé",
+    "noAssignmentsYet": "Aucune tâche ne vous a encore été attribuée.",
     "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "practicalNumber": "Pratique #"
   }
 }
