--- a/client/public/locales/gu/common.json
+++ b/client/public/locales/gu/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ડેશબોર્ડ",
-    "classes": "વર્ગો",
-    "myClasses": "મારા વર્ગો",
-    "manageUsers": "વપરાશકર્તા વ્યવસ્થાપન",
-    "labsPCs": "લેબ અને પીસી",
-    "assignments": "સોંપણી",
-    "assignedWork": "સોંપેલું કામ",
-    "reviewSubmissions": "સબમિશન સમીક્ષા",
-    "review": "સમીક્ષા",
-    "documents": "દસ્તાવેજો",
-    "sharedDocs": "શેર કરેલા દસ્તાવેજો",
-    "grades": "ગ્રેડ",
-    "myGrades": "મારા ગ્રેડ",
-    "viva": "મૌખિક",
-    "whiteboard": "વ્હાઇટબોર્ડ",
-    "liveSessions": "લાઇવ સત્ર",
-    "liveBoard": "લાઇવ બોર્ડ",
-    "activityLogs": "પ્રવૃત્તિ લોગ",
-    "tickets": "ટિકિટ",
-    "reportIssue": "સમસ્યા નોંધાવો",
-    "schoolProfile": "શાળા પ્રોફાઇલ",
-    "reports": "અહેવાલો",
-    "settings": "સેટિંગ્સ",
-    "mySubmissions": "મારા સબમિશન",
-    "myWork": "સોંપેલું કામ"
-  },
-  "common": {
-    "save": "સાચવો",
-    "cancel": "રદ કરો",
-    "edit": "સંપાદિત કરો",
-    "delete": "કાઢી નાખો",
-    "submit": "સબમિટ કરો",
-    "search": "શોધો",
-    "filter": "ફિલ્ટર",
-    "loading": "લોડ થઈ રહ્યું છે...",
-    "noData": "કોઈ ડેટા ઉપલબ્ધ નથી",
-    "confirm": "પુષ્ટિ કરો",
-    "close": "બંધ કરો",
-    "add": "ઉમેરો",
-    "remove": "દૂર કરો",
-    "upload": "અપલોડ કરો",
-    "download": "ડાઉનલોડ કરો",
-    "view": "જુઓ",
-    "back": "પાછળ",
-    "next": "આગળ",
-    "previous": "અગાઉનું",
-    "yes": "હા",
-    "no": "ના",
-    "all": "બધા",
-    "active": "સક્રિય",
-    "inactive": "નિષ્ક્રિય",
-    "status": "સ્થિતિ",
-    "actions": "ક્રિયાઓ",
-    "date": "તારીખ",
-    "time": "સમય",
-    "name": "નામ",
-    "description": "વર્ણન",
-    "type": "પ્રકાર",
-    "email": "ઈમેલ",
-    "phone": "ફોન",
-    "address": "સરનામું",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "સાઇન ઇન કરો",
-    "logout": "લૉગ આઉટ",
-    "email": "ઈમેલ સરનામું",
-    "password": "પાસવર્ડ",
-    "rememberMe": "મને યાદ રાખો",
-    "forgotPassword": "પાસવર્ડ ભૂલી ગયા?",
-    "noAccount": "એકાઉન્ટ નથી?",
-    "signUp": "સાઇન અપ",
-    "signingIn": "સાઇન ઇન થઈ રહ્યું છે...",
-    "welcome": "ફરી સ્વાગત છે!",
-    "demoCredentials": "ડેમો ક્રેડેન્શિયલ્સ",
-    "firstTimeLogin": "પહેલી વાર? PIN વાપરો",
-    "usePassword": "પાસવર્ડ વાપરો",
-    "pin": "6-અંકનો PIN",
-    "verifyPin": "PIN ચકાસો",
-    "setPassword": "પાસવર્ડ સેટ કરો",
-    "confirmPassword": "પાસવર્ડ કન્ફર્મ કરો",
-    "verifying": "ચકાસાઈ રહ્યું છે...",
-    "settingUp": "સેટ અપ થઈ રહ્યું છે...",
-    "setPasswordLogin": "પાસવર્ડ સેટ કરો અને લૉગિન કરો",
-    "enterPinFromTeacher": "શિક્ષક પાસેથી મળેલ PIN દાખલ કરો",
-    "academicSession": "શૈક્ષણિક સત્ર",
-    "noSessions": "કોઈ સત્ર નથી",
-    "current": "વર્તમાન",
-    "pinVerified": "PIN ચકાસાઈ! તમારો પાસવર્ડ સેટ કરો."
-  },
-  "language": {
-    "selectLanguage": "ભાષા પસંદ કરો",
-    "indianLanguages": "ભારતીય ભાષાઓ",
-    "internationalLanguages": "આંતરરાષ્ટ્રીય ભાષાઓ"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "યુનિફાઇડ લેબ રેકોર્ડ્સ"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "યુનિફાઈડ લેબ રેકોર્ડ મેનેજમેન્ટ સિસ્ટમ",
-    "features": {
-      "multiLanguage": "બહુ-ભાષા સમર્થન",
-      "onlineViva": "ઓનલાઈન વાઈવા સિસ્ટમ",
-      "realTimeGrading": "રિયલ-ટાઈમ ગ્રેડિંગ",
-      "comprehensiveReports": "વ્યાપક અહેવાલો"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "લક્ષ્ય",
+    "allStatus": "બધી સ્થિતિ",
+    "apparatus": "ઉપકરણ",
+    "archived": "આર્કાઇવ કરેલ",
+    "assignTo": "સોંપો",
+    "assignmentType": "પ્રકાર",
+    "attachments": "જોડાણો",
+    "createAssignment": "સોંપણી બનાવો",
+    "createFirst": "શરૂઆત કરવા માટે તમારું પહેલું અસાઇનમેન્ટ બનાવો.",
+    "created": "બનાવ્યું",
+    "deleteAssignment": "સોંપણી કાઢી નાખો",
+    "deleteConfirm": "શું તમે ખરેખર આ કાઢી નાખવા માંગો છો? આ ક્રિયા પૂર્વવત્ કરી શકાતી નથી.",
+    "draft": "ડ્રાફ્ટ",
+    "dueDate": "નિયત તારીખ",
+    "experimentNumber": "પ્રયોગ #",
+    "instructions": "સૂચનાઓ",
+    "maxMarks": "મેક્સ માર્ક્સ",
+    "noAssignmentsFound": "કોઈ સોંપણી મળી નથી",
+    "noAssignmentsYet": "તમને હજુ સુધી કોઈ સોંપણી સોંપવામાં આવી નથી.",
+    "observation": "અવલોકન",
+    "practicalNumber": "વ્યવહારુ #"
   }
 }
