--- a/client/public/locales/hi/common.json
+++ b/client/public/locales/hi/common.json
@@ -73,217 +73,30 @@
     "forgotPassword": "पासवर्ड भूल गए?",
     "noAccount": "कोई खाता नहीं है?",
     "signUp": "साइन अप करें",
-    "signingIn": "साइन इन हो रहा है...",
-    "welcome": "वापसी पर स्वागत है!",
-    "demoCredentials": "डेमो क्रेडेंशियल्स",
-    "firstTimeLogin": "पहली बार? पिन का उपयोग करें",
-    "usePassword": "पासवर्ड का उपयोग करें",
-    "pin": "6-अंकीय पिन",
-    "verifyPin": "पिन सत्यापित करें",
-    "setPassword": "पासवर्ड सेट करें",
-    "confirmPassword": "पासवर्ड की पुष्टि करें",
-    "verifying": "सत्यापित हो रहा है...",
-    "settingUp": "सेट अप हो रहा है...",
-    "setPasswordLogin": "पासवर्ड सेट करें और लॉगिन करें",
-    "enterPinFromTeacher": "शिक्षक से प्राप्त पिन दर्ज करें",
-    "academicSession": "शैक्षणिक सत्र",
-    "noSessions": "कोई सत्र नहीं",
-    "current": "वर्तमान",
-    "pinVerified": "पिन सत्यापित! अपना पासवर्ड सेट करें।"
-  },
-  "language": {
-    "selectLanguage": "भाषा चुनें",
-    "indianLanguages": "भारतीय भाषाएं",
-    "internationalLanguages": "अंतर्राष्ट्रीय भाषाएं"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "यूनिफाइड लैब रिकॉर्ड्स"
-  },
-  "login": {
-    "title": "यूएलआरएमएस",
-    "subtitle": "यूनिफाइड लैब रिकॉर्ड प्रबंधन प्रणाली",
-    "features": {
-      "multiLanguage": "बहु-भाषा समर्थन",
-      "onlineViva": "ऑनलाइन वाइवा सिस्टम",
-      "realTimeGrading": "रियल-टाइम ग्रेडिंग",
-      "comprehensiveReports": "व्यापक रिपोर्ट"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "स्वागत है, {{name}}!",
-    "labActivities": "आपकी लैब गतिविधियों की जानकारी।",
-    "lastUpdated": "अंतिम अपडेट",
-    "class": "कक्षा",
-    "group": "समूह",
-    "assignedPc": "असाइन किया गया पीसी",
-    "noClassGroup": "अभी कोई कक्षा या समूह असाइन नहीं है।",
-    "assignedToMe": "मुझे सौंपा गया",
-    "mySubmissions": "मेरी प्रस्तुतियाँ",
-    "pendingVivas": "लंबित वाइवा",
-    "avgScore": "औसत स्कोर",
-    "graded": "ग्रेड किया गया",
-    "myAssignments": "मेरे असाइनमेंट",
-    "pendingGrading": "ग्रेडिंग बाकी",
-    "scheduledVivas": "निर्धारित वाइवा",
-    "completed": "पूर्ण",
-    "totalUsers": "कुल उपयोगकर्ता",
-    "totalClasses": "कुल कक्षाएं",
-    "assignments": "असाइनमेंट",
-    "activeLabs": "सक्रिय लैब",
-    "maintenance": "रखरखाव",
-    "viewAssignments": "असाइनमेंट देखें",
-    "checkPendingWork": "बाकी काम देखें",
-    "trackYourWork": "अपना काम ट्रैक करें",
-    "viewGrades": "ग्रेड देखें",
-    "checkScores": "अपने स्कोर देखें",
-    "reportIssue": "समस्या दर्ज करें",
-    "createAssignment": "असाइनमेंट बनाएं",
-    "addNewPractical": "नया प्रैक्टिकल जोड़ें",
-    "reviewPending": "समीक्षा बाकी",
-    "gradeSubmissions": "सबमिशन ग्रेड करें",
-    "manageClasses": "कक्षाएं प्रबंधित करें",
-    "viewStudents": "छात्र देखें",
-    "shareWithStudents": "छात्रों के साथ साझा करें",
-    "manageComputerLabs": "कंप्यूटर लैब प्रबंधित करें",
-    "userManagement": "उपयोगकर्ता प्रबंधन",
-    "manageAllUsers": "सभी उपयोगकर्ता प्रबंधित करें",
-    "importStudents": "छात्र आयात करें",
-    "bulkImportCsv": "बल्क CSV आयात",
-    "upcomingDeadlines": "आने वाली समय सीमाएं",
-    "noUpcomingDeadlines": "कोई आने वाली समय सीमा नहीं",
-    "submitted": "जमा किया गया",
-    "revision": "संशोधन",
-    "pending": "लंबित",
-    "daysLeft": "{{days}}द {{hours}}घ बाकी",
-    "hoursLeft": "{{hours}}घ बाकी",
-    "dueSoon": "जल्द ही देय!"
-  },
-  "classes": {
-    "title": "कक्षाएं",
-    "addClass": "कक्षा जोड़ें",
-    "searchClasses": "कक्षाएं खोजें...",
-    "noClassesFound": "कोई कक्षा नहीं मिली",
-    "createFirst": "आरंभ करने के लिए अपनी पहली कक्षा बनाएं।",
-    "noClassesAvailable": "कोई कक्षा उपलब्ध नहीं।",
-    "students": "छात्र",
-    "teacher": "शिक्षक",
-    "view": "देखें",
-    "general": "सामान्य",
-    "currentSession": "वर्तमान सत्र",
-    "historical": "ऐतिहासिक",
-    "sessionHint": "बदलने के लिए हेडर में सत्र चयनकर्ता का उपयोग करें",
-    "createClass": "कक्षा बनाएं",
-    "className": "कक्षा का नाम",
-    "classNameHindi": "कक्षा का नाम (हिंदी)",
-    "gradeLevel": "ग्रेड स्तर",
-    "section": "अनुभाग",
-    "stream": "स्ट्रीम",
-    "classTeacher": "कक्षा शिक्षक",
-    "selectTeacher": "शिक्षक चुनें",
-    "creating": "बना रहा है...",
-    "noTeachersFound": "कोई शिक्षक नहीं मिला"
+    "signingIn": "साइन इन हो रहा है..."
   },
   "assignments": {
-    "title": "असाइनमेंट",
-    "createAssignment": "असाइनमेंट बनाएं",
-    "searchAssignments": "असाइनमेंट खोजें...",
-    "allStatus": "सभी स्थिति",
-    "draft": "ड्राफ्ट",
-    "published": "प्रकाशित",
-    "archived": "संग्रहीत",
-    "noAssignmentsFound": "कोई असाइनमेंट नहीं मिला",
-    "createFirst": "आरंभ करने के लिए अपना पहला असाइनमेंट बनाएं।",
-    "noAssignmentsYet": "आपको अभी तक कोई असाइनमेंट नहीं दिया गया है।",
-    "scheduled": "निर्धारित",
-    "created": "बनाया गया",
-    "maxMarks": "अधिकतम अंक",
-    "publish": "प्रकाशित करें",
-    "submit": "जमा करें",
-    "deleteAssignment": "असाइनमेंट हटाएं",
-    "deleteConfirm": "क्या आप वाकई इसे हटाना चाहते हैं? यह क्रिया वापस नहीं की जा सकती।",
-    "experimentNumber": "प्रयोग #",
-    "assignmentType": "प्रकार",
-    "dueDate": "नियत तारीख",
-    "assignTo": "असाइन करें",
-    "selectClass": "कक्षा चुनें",
-    "selectGroup": "समूह चुनें",
-    "instructions": "निर्देश",
-    "attachments": "अटैचमेंट",
-    "practicalNumber": "प्रैक्टिकल #",
     "aim": "उद्देश्य",
+    "allStatus": "सभी स्थितियाँ",
     "apparatus": "उपकरण",
-    "procedure": "प्रक्रिया",
+    "archived": "संग्रहीत",
+    "assignTo": "के लिए आवंटित",
+    "assignmentType": "प्रकार",
+    "attachments": "संलग्नक",
+    "createAssignment": "असाइनमेंट बनाएं",
+    "createFirst": "शुरुआत करने के लिए अपना पहला असाइनमेंट बनाएं।",
+    "created": "बनाया था",
+    "deleteAssignment": "असाइनमेंट हटाएं",
+    "deleteConfirm": "क्या आप वाकई इसे हटाना चाहते हैं? यह कार्रवाई पूर्ववत नहीं की जा सकती।",
+    "draft": "मसौदा",
+    "dueDate": "नियत तारीख",
+    "experimentNumber": "प्रयोग #",
+    "instructions": "निर्देश",
+    "maxMarks": "अधिकतम अंक",
+    "noAssignmentsFound": "कोई असाइनमेंट नहीं मिला",
+    "noAssignmentsYet": "अभी तक आपको कोई कार्य नहीं सौंपा गया है।",
     "observation": "अवलोकन",
-    "result": "परिणाम",
-    "viva": "मौखिक"
-  },
-  "submissions": {
-    "title": "सबमिशन",
-    "mySubmissions": "मेरे सबमिशन",
-    "forReview": "समीक्षा के लिए सबमिशन",
-    "all": "सभी",
-    "submitted": "सबमिट किया",
-    "underReview": "समीक्षाधीन",
-    "graded": "ग्रेडेड",
-    "needsRevision": "संशोधन आवश्यक",
-    "returned": "वापस",
-    "noSubmissions": "कोई सबमिशन नहीं मिला",
-    "noPending": "समीक्षा के लिए कोई सबमिशन नहीं है।",
-    "noSubmitted": "आपने अभी तक कोई असाइनमेंट सबमिट नहीं किया है।",
-    "revision": "संशोधन #",
-    "student": "छात्र",
-    "assignedBy": "द्वारा असाइन",
-    "submittedAt": "सबमिट किया गया",
-    "lateBy": "देरी से",
-    "days": "दिन",
-    "marks": "अंक",
-    "gradedAt": "ग्रेड किया गया",
-    "by": "द्वारा",
-    "review": "समीक्षा",
-    "view": "देखें"
-  },
-  "grades": {
-    "title": "ग्रेड",
-    "myGrades": "मेरे ग्रेड",
-    "grading": "ग्रेडिंग",
-    "averageScore": "औसत स्कोर",
-    "passed": "पास",
-    "totalGraded": "कुल ग्रेडेड",
-    "allGrades": "सभी ग्रेड",
-    "published": "प्रकाशित",
-    "unpublished": "अप्रकाशित",
-    "noGradesYet": "अभी कोई ग्रेड नहीं",
-    "gradesWillAppear": "आपके ग्रेड यहां दिखाई देंगे जब आपके सबमिशन ग्रेड और प्रकाशित हो जाएंगे।",
-    "assignedGrades": "आपके द्वारा दिए गए ग्रेड यहां दिखाई देंगे।",
-    "gradeScale": "वर्तमान ग्रेड स्केल",
-    "viewCriteria": "ग्रेडिंग मानदंड और अंक वितरण देखें",
-    "gradeDistribution": "ग्रेड वितरण",
-    "viewHistory": "परिवर्तन इतिहास देखें",
-    "gradeRange": "रेंज",
-    "gradePoints": "ग्रेड पॉइंट्स",
-    "practical": "प्रैक्टिकल",
-    "output": "आउटपुट",
-    "viva": "मौखिक",
-    "latePenalty": "देरी दंड",
-    "final": "अंतिम",
-    "outOf": "में से",
-    "codeFeedback": "कोड फीडबैक",
-    "remarks": "टिप्पणियां",
-    "publishToStudent": "छात्र को प्रकाशित करें",
-    "history": "इतिहास",
-    "modificationHistory": "ग्रेड संशोधन इतिहास",
-    "currentGrade": "वर्तमान ग्रेड",
-    "lastModified": "अंतिम संशोधन",
-    "before": "पहले",
-    "after": "बाद में",
-    "noModifications": "अभी कोई संशोधन नहीं",
-    "reason": "कारण",
-    "revisionHistory": "ग्रेड स्केल संशोधन इतिहास",
-    "revision": "संशोधन",
-    "modified": "संशोधित",
-    "status": "स्थिति",
-    "created": "बनाया गया",
-    "updated": "अपडेट किया गया",
-    "deleted": "हटाया गया"
+    "practicalNumber": "व्यावहारिक #",
+    "procedure": "प्रक्रिया"
   }
 }
