--- a/client/public/locales/ml/common.json
+++ b/client/public/locales/ml/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ഡാഷ്ബോർഡ്",
-    "classes": "ക്ലാസുകൾ",
-    "myClasses": "എന്റെ ക്ലാസുകൾ",
-    "manageUsers": "ഉപയോക്താക്കളെ നിയന്ത്രിക്കുക",
-    "labsPCs": "ലാബുകളും PCകളും",
-    "assignments": "അസൈൻമെന്റുകൾ",
-    "assignedWork": "നൽകിയ ജോലി",
-    "reviewSubmissions": "സമർപ്പണങ്ങൾ അവലോകനം ചെയ്യുക",
-    "review": "അവലോകനം",
-    "documents": "രേഖകൾ",
-    "sharedDocs": "പങ്കിട്ട ഡോക്സ്",
-    "grades": "ഗ്രേഡുകൾ",
-    "myGrades": "എന്റെ ഗ്രേഡുകൾ",
-    "viva": "വൈവ",
-    "whiteboard": "വൈറ്റ്ബോർഡ്",
-    "liveSessions": "ലൈവ് സെഷനുകൾ",
-    "liveBoard": "ലൈവ് ബോർഡ്",
-    "activityLogs": "പ്രവർത്തന ലോഗുകൾ",
-    "tickets": "ടിക്കറ്റുകൾ",
-    "reportIssue": "പ്രശ്നം റിപ്പോർട്ട് ചെയ്യുക",
-    "schoolProfile": "സ്കൂൾ പ്രൊഫൈൽ",
-    "reports": "റിപ്പോർട്ടുകൾ",
-    "settings": "സജ്ജീകരണങ്ങൾ",
-    "mySubmissions": "എന്റെ സമർപ്പണങ്ങൾ",
-    "myWork": "നൽകിയ ജോലി"
-  },
-  "common": {
-    "save": "സേവ് ചെയ്യുക",
-    "cancel": "റദ്ദാക്കുക",
-    "edit": "എഡിറ്റ് ചെയ്യുക",
-    "delete": "ഇല്ലാതാക്കുക",
-    "submit": "സമർപ്പിക്കുക",
-    "search": "തിരയുക",
-    "filter": "ഫിൽട്ടർ",
-    "loading": "ലോഡ് ചെയ്യുന്നു...",
-    "noData": "ഡാറ്റ ലഭ്യമല്ല",
-    "confirm": "സ്ഥിരീകരിക്കുക",
-    "close": "അടയ്ക്കുക",
-    "add": "ചേർക്കുക",
-    "remove": "നീക്കം ചെയ്യുക",
-    "upload": "അപ്‌ലോഡ് ചെയ്യുക",
-    "download": "ഡൗൺലോഡ് ചെയ്യുക",
-    "view": "കാണുക",
-    "back": "തിരികെ",
-    "next": "അടുത്തത്",
-    "previous": "മുമ്പത്തെ",
-    "yes": "അതെ",
-    "no": "ഇല്ല",
-    "all": "എല്ലാം",
-    "active": "സജീവം",
-    "inactive": "നിഷ്ക്രിയം",
-    "status": "സ്ഥിതി",
-    "actions": "പ്രവർത്തനങ്ങൾ",
-    "date": "തീയതി",
-    "time": "സമയം",
-    "name": "പേര്",
-    "description": "വിവരണം",
-    "type": "തരം",
-    "email": "ഇമെയിൽ",
-    "phone": "ഫോൺ",
-    "address": "വിലാസം",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "സൈൻ ഇൻ",
-    "logout": "ലോഗൗട്ട്",
-    "email": "ഇമെയിൽ വിലാസം",
-    "password": "പാസ്‌വേഡ്",
-    "rememberMe": "എന്നെ ഓർക്കുക",
-    "forgotPassword": "പാസ്‌വേഡ് മറന്നോ?",
-    "noAccount": "അക്കൗണ്ട് ഇല്ലേ?",
-    "signUp": "സൈൻ അപ്പ്",
-    "signingIn": "സൈൻ ഇൻ ചെയ്യുന്നു...",
-    "welcome": "തിരികെ സ്വാഗതം!",
-    "demoCredentials": "ഡെമോ ക്രെഡൻഷ്യലുകൾ",
-    "firstTimeLogin": "ആദ്യമായി? PIN ഉപയോഗിക്കുക",
-    "usePassword": "പാസ്‌വേഡ് ഉപയോഗിക്കുക",
-    "pin": "6-അക്ക PIN",
-    "verifyPin": "PIN പരിശോധിക്കുക",
-    "setPassword": "പാസ്‌വേഡ് സജ്ജമാക്കുക",
-    "confirmPassword": "പാസ്‌വേഡ് സ്ഥിരീകരിക്കുക",
-    "verifying": "പരിശോധിക്കുന്നു...",
-    "settingUp": "സജ്ജമാക്കുന്നു...",
-    "setPasswordLogin": "പാസ്‌വേഡ് സെറ്റ് ചെയ്ത് ലോഗിൻ ചെയ്യുക",
-    "enterPinFromTeacher": "അധ്യാപകനിൽ നിന്ന് ലഭിച്ച PIN നൽകുക",
-    "academicSession": "അക്കാദമിക് സെഷൻ",
-    "noSessions": "സെഷനുകളില്ല",
-    "current": "നിലവിലെ",
-    "pinVerified": "PIN പരിശോധിച്ചു! നിങ്ങളുടെ പാസ്‌വേഡ് സെറ്റ് ചെയ്യുക."
-  },
-  "language": {
-    "selectLanguage": "ഭാഷ തിരഞ്ഞെടുക്കുക",
-    "indianLanguages": "ഇന്ത്യൻ ഭാഷകൾ",
-    "internationalLanguages": "അന്താരാഷ്ട്ര ഭാഷകൾ"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "യൂണിഫൈഡ് ലാബ് റെക്കോർഡ്സ്"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "യൂണിഫൈഡ് ലാബ് റെക്കോർഡ് മാനേജ്മെന്റ് സിസ്റ്റം",
-    "features": {
-      "multiLanguage": "ബഹു-ഭാഷാ പിന്തുണ",
-      "onlineViva": "ഓൺലൈൻ വൈവ സിസ്റ്റം",
-      "realTimeGrading": "റിയൽ-ടൈം ഗ്രേഡിംഗ്",
-      "comprehensiveReports": "സമഗ്ര റിപ്പോർട്ടുകൾ"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "ലക്ഷ്യം",
+    "allStatus": "എല്ലാ സ്റ്റാറ്റസും",
+    "apparatus": "ഉപകരണം",
+    "archived": "ആർക്കൈവ് ചെയ്‌തു",
+    "assignTo": "നിയോഗിക്കുക",
+    "assignmentType": "ടൈപ്പ് ചെയ്യുക",
+    "attachments": "അറ്റാച്ചുമെന്റുകൾ",
+    "createAssignment": "അസൈൻമെന്റ് സൃഷ്ടിക്കുക",
+    "createFirst": "ആരംഭിക്കുന്നതിന് നിങ്ങളുടെ ആദ്യ അസൈൻമെന്റ് സൃഷ്ടിക്കുക.",
+    "created": "സൃഷ്ടിച്ചു",
+    "deleteAssignment": "അസൈൻമെന്റ് ഇല്ലാതാക്കുക",
+    "deleteConfirm": "ഇത് ഇല്ലാതാക്കണമെന്ന് നിങ്ങൾക്ക് ഉറപ്പാണോ? ഈ പ്രവർത്തനം പഴയപടിയാക്കാൻ കഴിയില്ല.",
+    "draft": "ഡ്രാഫ്റ്റ്",
+    "dueDate": "അവസാന തീയതി",
+    "experimentNumber": "പരീക്ഷണം #",
+    "instructions": "നിർദ്ദേശങ്ങൾ",
+    "maxMarks": "മാക്സ് മാർക്ക്സ്",
+    "noAssignmentsFound": "അസൈൻമെന്റുകളൊന്നും കണ്ടെത്തിയില്ല",
+    "noAssignmentsYet": "നിങ്ങൾക്ക് ഇതുവരെ ഒരു അസൈൻമെന്റും നൽകിയിട്ടില്ല.",
+    "observation": "നിരീക്ഷണം",
+    "practicalNumber": "പ്രായോഗികം #"
   }
 }
