--- a/client/public/locales/or/common.json
+++ b/client/public/locales/or/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ଡ୍ୟାସବୋର୍ଡ",
-    "classes": "ଶ୍ରେଣୀ",
-    "myClasses": "ମୋ ଶ୍ରେଣୀ",
-    "manageUsers": "ଉପଯୋଗକର୍ତ୍ତା ପରିଚାଳନା",
-    "labsPCs": "ଲ୍ୟାବ ଏବଂ PC",
-    "assignments": "କାର୍ଯ୍ୟ",
-    "assignedWork": "ଦିଆଯାଇଥିବା କାର୍ଯ୍ୟ",
-    "reviewSubmissions": "ଦାଖଲ ସମୀକ୍ଷା",
-    "review": "ସମୀକ୍ଷା",
-    "documents": "ଦଲିଲ",
-    "sharedDocs": "ଅଂଶୀଦାରୀ ଦଲିଲ",
-    "grades": "ଗ୍ରେଡ",
-    "myGrades": "ମୋ ଗ୍ରେଡ",
-    "viva": "ମୌଖିକ",
-    "whiteboard": "ହ୍ୱାଇଟବୋର୍ଡ",
-    "liveSessions": "ଲାଇଭ ସେସନ",
-    "liveBoard": "ଲାଇଭ ବୋର୍ଡ",
-    "activityLogs": "କାର୍ଯ୍ୟକଳାପ ଲଗ",
-    "tickets": "ଟିକେଟ",
-    "reportIssue": "ସମସ୍ୟା ରିପୋର୍ଟ କରନ୍ତୁ",
-    "schoolProfile": "ବିଦ୍ୟାଳୟ ପ୍ରୋଫାଇଲ",
-    "reports": "ରିପୋର୍ଟ",
-    "settings": "ସେଟିଂସ",
-    "mySubmissions": "ମୋ ଦାଖଲ",
-    "myWork": "ଦିଆଯାଇଥିବା କାର୍ଯ୍ୟ"
-  },
-  "common": {
-    "save": "ସେଭ କରନ୍ତୁ",
-    "cancel": "ବାତିଲ",
-    "edit": "ସଂପାଦନା",
-    "delete": "ବିଲୋପ",
-    "submit": "ଦାଖଲ",
-    "search": "ଖୋଜନ୍ତୁ",
-    "filter": "ଫିଲ୍ଟର",
-    "loading": "ଲୋଡ ହେଉଛି...",
-    "noData": "କୌଣସି ଡାଟା ନାହିଁ",
-    "confirm": "ନିଶ୍ଚିତ",
-    "close": "ବନ୍ଦ",
-    "add": "ଯୋଡ଼ନ୍ତୁ",
-    "remove": "ହଟାନ୍ତୁ",
-    "upload": "ଅପଲୋଡ",
-    "download": "ଡାଉନଲୋଡ",
-    "view": "ଦେଖନ୍ତୁ",
-    "back": "ପଛକୁ",
-    "next": "ପରବର୍ତ୍ତୀ",
-    "previous": "ପୂର୍ବ",
-    "yes": "ହଁ",
-    "no": "ନା",
-    "all": "ସମସ୍ତ",
-    "active": "ସକ୍ରିୟ",
-    "inactive": "ନିଷ୍କ୍ରିୟ",
-    "status": "ଅବସ୍ଥା",
-    "actions": "କାର୍ଯ୍ୟ",
-    "date": "ତାରିଖ",
-    "time": "ସମୟ",
-    "name": "ନାମ",
-    "description": "ବିବରଣୀ",
-    "type": "ପ୍ରକାର",
-    "email": "ଇମେଲ",
-    "phone": "ଫୋନ",
-    "address": "ଠିକଣା",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "ସାଇନ୍ ଇନ୍",
-    "logout": "ଲଗଆଉଟ",
-    "email": "ଇମେଲ ଠିକଣା",
-    "password": "ପାସୱାର୍ଡ",
-    "rememberMe": "ମୋତେ ମନେ ରଖନ୍ତୁ",
-    "forgotPassword": "ପାସୱାର୍ଡ ଭୁଲିଗଲେ?",
-    "noAccount": "ଆକାଉଣ୍ଟ ନାହିଁ?",
-    "signUp": "ସାଇନ ଅପ",
-    "signingIn": "ସାଇନ୍ ଇନ୍ ହେଉଛି...",
-    "welcome": "ପୁଣି ସ୍ୱାଗତ!",
-    "demoCredentials": "ଡେମୋ କ୍ରେଡେନସିଆଲ୍",
-    "firstTimeLogin": "ପ୍ରଥମ ଥର? PIN ବ୍ୟବହାର କରନ୍ତୁ",
-    "usePassword": "ପାସୱାର୍ଡ ବ୍ୟବହାର କରନ୍ତୁ",
-    "pin": "6-ଅଙ୍କ PIN",
-    "verifyPin": "PIN ଯାଞ୍ଚ କରନ୍ତୁ",
-    "setPassword": "ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ",
-    "confirmPassword": "ପାସୱାର୍ଡ ନିଶ୍ଚିତ କରନ୍ତୁ",
-    "verifying": "ଯାଞ୍ଚ ହେଉଛି...",
-    "settingUp": "ସେଟ ଅପ ହେଉଛି...",
-    "setPasswordLogin": "ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ ଏବଂ ଲଗଇନ କରନ୍ତୁ",
-    "enterPinFromTeacher": "ଶିକ୍ଷକଙ୍କଠାରୁ ପ୍ରାପ୍ତ PIN ଦିଅନ୍ତୁ",
-    "academicSession": "ଶିକ୍ଷାବର୍ଷ",
-    "noSessions": "କୌଣସି ସେସନ ନାହିଁ",
-    "current": "ବର୍ତ୍ତମାନ",
-    "pinVerified": "PIN ଯାଞ୍ଚ ହୋଇଗଲା! ଆପଣଙ୍କ ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ।"
-  },
-  "language": {
-    "selectLanguage": "ଭାଷା ବାଛନ୍ତୁ",
-    "indianLanguages": "ଭାରତୀୟ ଭାଷା",
-    "internationalLanguages": "ଆନ୍ତର୍ଜାତିକ ଭାଷା"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "ୟୁନିଫାଇଡ ଲ୍ୟାବ ରେକର୍ଡସ"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "ୟୁନିଫାଇଡ ଲ୍ୟାବ ରେକର୍ଡ ମ୍ୟାନେଜମେଣ୍ଟ ସିଷ୍ଟମ",
-    "features": {
-      "multiLanguage": "ବହୁ-ଭାଷା ସମର୍ଥନ",
-      "onlineViva": "ଅନଲାଇନ ଭାଇଭା ସିଷ୍ଟମ",
-      "realTimeGrading": "ରିଅଲ-ଟାଇମ ଗ୍ରେଡିଂ",
-      "comprehensiveReports": "ବିସ୍ତୃତ ରିପୋର୍ଟ"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "ଲକ୍ଷ୍ୟ",
+    "allStatus": "ସମସ୍ତ ସ୍ଥିତି",
+    "apparatus": "ଯନ୍ତ୍ରପାତି",
+    "archived": "ଆର୍କାଇଭ୍ କରାଗଲା",
+    "assignTo": "ଏହାକୁ ଆସାଇନ୍ କରନ୍ତୁ",
+    "assignmentType": "ପ୍ରକାର",
+    "attachments": "ଆଟାଚମେଣ୍ଟ୍",
+    "createAssignment": "ଆସାଇନମେଣ୍ଟ ତିଆରି କରନ୍ତୁ",
+    "createFirst": "ଆରମ୍ଭ କରିବା ପାଇଁ ଆପଣଙ୍କର ପ୍ରଥମ ଆସାଇନମେଣ୍ଟ ତିଆରି କରନ୍ତୁ।",
+    "created": "ସୃଷ୍ଟି ହୋଇଛି",
+    "deleteAssignment": "ଆସାଇନମେଣ୍ଟ ଡିଲିଟ୍ କରନ୍ତୁ",
+    "deleteConfirm": "ଆପଣ ଏହାକୁ ବିଲୋପ କରିବାକୁ ନିଶ୍ଚିତ କି? ଏହି କାର୍ଯ୍ୟକୁ ପୂର୍ବବତ୍ କରାଯାଇପାରିବ ନାହିଁ।",
+    "draft": "ଡ୍ରାଫ୍ଟ",
+    "dueDate": "ଧାର୍ଯ୍ୟ ତାରିଖ",
+    "experimentNumber": "ପରୀକ୍ଷଣ #",
+    "instructions": "ନିର୍ଦ୍ଦେଶାବଳୀ",
+    "maxMarks": "ସର୍ବାଧିକ ମାର୍କ",
+    "noAssignmentsFound": "କୌଣସି ଆସାଇନମ୍ୟାଣ୍ଟ ମିଳିଲା ନାହିଁ",
+    "noAssignmentsYet": "ତୁମକୁ ଏପର୍ଯ୍ୟନ୍ତ କୌଣସି କାର୍ଯ୍ୟ ଦିଆଯାଇନାହିଁ।",
+    "observation": "ପର୍ଯ୍ୟବେକ୍ଷଣ",
+    "practicalNumber": "ବ୍ୟବହାରିକ #"
   }
 }
