--- a/client/public/locales/pa/common.json
+++ b/client/public/locales/pa/common.json
@@ -1,302 +1,25 @@
 {
-  "nav": {
-    "dashboard": "ਡੈਸ਼ਬੋਰਡ",
-    "classes": "ਕਲਾਸਾਂ",
-    "myClasses": "ਮੇਰੀਆਂ ਕਲਾਸਾਂ",
-    "manageUsers": "ਉਪਭੋਗਤਾ ਪ੍ਰਬੰਧਨ",
-    "labsPCs": "ਲੈਬ ਅਤੇ PC",
-    "assignments": "ਅਸਾਈਨਮੈਂਟ",
-    "assignedWork": "ਸੌਂਪਿਆ ਕੰਮ",
-    "reviewSubmissions": "ਸਬਮਿਸ਼ਨ ਸਮੀਖਿਆ",
-    "review": "ਸਮੀਖਿਆ",
-    "documents": "ਦਸਤਾਵੇਜ਼",
-    "sharedDocs": "ਸਾਂਝੇ ਦਸਤਾਵੇਜ਼",
-    "grades": "ਗ੍ਰੇਡ",
-    "myGrades": "ਮੇਰੇ ਗ੍ਰੇਡ",
-    "viva": "ਮੌਖਿਕ",
-    "whiteboard": "ਵਾਈਟਬੋਰਡ",
-    "liveSessions": "ਲਾਈਵ ਸੈਸ਼ਨ",
-    "liveBoard": "ਲਾਈਵ ਬੋਰਡ",
-    "activityLogs": "ਗਤੀਵਿਧੀ ਲੌਗ",
-    "tickets": "ਟਿਕਟਾਂ",
-    "reportIssue": "ਸਮੱਸਿਆ ਰਿਪੋਰਟ ਕਰੋ",
-    "schoolProfile": "ਸਕੂਲ ਪ੍ਰੋਫਾਈਲ",
-    "reports": "ਰਿਪੋਰਟਾਂ",
-    "settings": "ਸੈਟਿੰਗਾਂ",
-    "mySubmissions": "ਮੇਰੀਆਂ ਸਬਮਿਸ਼ਨ",
-    "myWork": "ਸੌਂਪਿਆ ਕੰਮ"
-  },
-  "common": {
-    "save": "ਸੇਵ ਕਰੋ",
-    "cancel": "ਰੱਦ ਕਰੋ",
-    "edit": "ਸੋਧੋ",
-    "delete": "ਮਿਟਾਓ",
-    "submit": "ਜਮ੍ਹਾਂ ਕਰੋ",
-    "search": "ਖੋਜੋ",
-    "filter": "ਫਿਲਟਰ",
-    "loading": "ਲੋਡ ਹੋ ਰਿਹਾ ਹੈ...",
-    "noData": "ਕੋਈ ਡਾਟਾ ਉਪਲਬਧ ਨਹੀਂ",
-    "confirm": "ਪੁਸ਼ਟੀ ਕਰੋ",
-    "close": "ਬੰਦ ਕਰੋ",
-    "add": "ਜੋੜੋ",
-    "remove": "ਹਟਾਓ",
-    "upload": "ਅੱਪਲੋਡ",
-    "download": "ਡਾਊਨਲੋਡ",
-    "view": "ਦੇਖੋ",
-    "back": "ਪਿੱਛੇ",
-    "next": "ਅਗਲਾ",
-    "previous": "ਪਿਛਲਾ",
-    "yes": "ਹਾਂ",
-    "no": "ਨਹੀਂ",
-    "all": "ਸਾਰੇ",
-    "active": "ਸਕਿਰਿਆ",
-    "inactive": "ਅਕਿਰਿਆ",
-    "status": "ਸਥਿਤੀ",
-    "actions": "ਕਾਰਵਾਈਆਂ",
-    "date": "ਤਾਰੀਖ",
-    "time": "ਸਮਾਂ",
-    "name": "ਨਾਮ",
-    "description": "ਵਰਣਨ",
-    "type": "ਕਿਸਮ",
-    "email": "ਈਮੇਲ",
-    "phone": "ਫ਼ੋਨ",
-    "address": "ਪਤਾ",
-    "viewAll": "View all",
-    "createTicket": "Create a ticket"
-  },
-  "auth": {
-    "login": "ਸਾਈਨ ਇਨ",
-    "logout": "ਲੌਗ ਆਊਟ",
-    "email": "ਈਮੇਲ ਪਤਾ",
-    "password": "ਪਾਸਵਰਡ",
-    "rememberMe": "ਮੈਨੂੰ ਯਾਦ ਰੱਖੋ",
-    "forgotPassword": "ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
-    "noAccount": "ਖਾਤਾ ਨਹੀਂ?",
-    "signUp": "ਸਾਈਨ ਅੱਪ",
-    "signingIn": "ਸਾਈਨ ਇਨ ਹੋ ਰਿਹਾ ਹੈ...",
-    "welcome": "ਵਾਪਸੀ 'ਤੇ ਸੁਆਗਤ!",
-    "demoCredentials": "ਡੈਮੋ ਕ੍ਰੇਡੇਨਸ਼ੀਅਲ",
-    "firstTimeLogin": "ਪਹਿਲੀ ਵਾਰ? PIN ਵਰਤੋ",
-    "usePassword": "ਪਾਸਵਰਡ ਵਰਤੋ",
-    "pin": "6-ਅੰਕੀ PIN",
-    "verifyPin": "PIN ਤਸਦੀਕ ਕਰੋ",
-    "setPassword": "ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ",
-    "confirmPassword": "ਪਾਸਵਰਡ ਪੁਸ਼ਟੀ ਕਰੋ",
-    "verifying": "ਤਸਦੀਕ ਹੋ ਰਿਹਾ ਹੈ...",
-    "settingUp": "ਸੈੱਟ ਅਪ ਹੋ ਰਿਹਾ ਹੈ...",
-    "setPasswordLogin": "ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ ਅਤੇ ਲੌਗਇਨ ਕਰੋ",
-    "enterPinFromTeacher": "ਅਧਿਆਪਕ ਤੋਂ ਮਿਲੀ PIN ਦਰਜ ਕਰੋ",
-    "academicSession": "ਅਕਾਦਮਿਕ ਸੈਸ਼ਨ",
-    "noSessions": "ਕੋਈ ਸੈਸ਼ਨ ਨਹੀਂ",
-    "current": "ਮੌਜੂਦਾ",
-    "pinVerified": "PIN ਤਸਦੀਕ ਹੋ ਗਈ! ਆਪਣਾ ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ।"
-  },
-  "language": {
-    "selectLanguage": "ਭਾਸ਼ਾ ਚੁਣੋ",
-    "indianLanguages": "ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ",
-    "internationalLanguages": "ਅੰਤਰਰਾਸ਼ਟਰੀ ਭਾਸ਼ਾਵਾਂ"
-  },
-  "sidebar": {
-    "unifiedLabRecords": "ਯੂਨੀਫਾਈਡ ਲੈਬ ਰਿਕਾਰਡ"
-  },
-  "login": {
-    "title": "ULRMS",
-    "subtitle": "ਯੂਨੀਫਾਈਡ ਲੈਬ ਰਿਕਾਰਡ ਮੈਨੇਜਮੈਂਟ ਸਿਸਟਮ",
-    "features": {
-      "multiLanguage": "ਬਹੁ-ਭਾਸ਼ਾ ਸਹਾਇਤਾ",
-      "onlineViva": "ਔਨਲਾਈਨ ਵਾਈਵਾ ਸਿਸਟਮ",
-      "realTimeGrading": "ਰੀਅਲ-ਟਾਈਮ ਗ੍ਰੇਡਿੰਗ",
-      "comprehensiveReports": "ਵਿਆਪਕ ਰਿਪੋਰਟਾਂ"
-    }
-  },
-  "dashboard": {
-    "welcomeBack": "Welcome back, {{name}}!",
-    "labActivities": "Here's what's happening with your lab activities.",
-    "lastUpdated": "Last Updated",
-    "class": "Class",
-    "group": "Group",
-    "assignedPc": "Assigned PC",
-    "noClassGroup": "No class or group assigned yet.",
-    "assignedToMe": "Assigned to Me",
-    "mySubmissions": "My Submissions",
-    "pendingVivas": "Pending Vivas",
-    "avgScore": "Avg. Score",
-    "graded": "graded",
-    "myAssignments": "My Assignments",
-    "pendingGrading": "Pending Grading",
-    "scheduledVivas": "Scheduled Vivas",
-    "completed": "Completed",
-    "totalUsers": "Total Users",
-    "totalClasses": "Total Classes",
-    "assignments": "Assignments",
-    "activeLabs": "Active Labs",
-    "maintenance": "maintenance",
-    "viewAssignments": "View Assignments",
-    "checkPendingWork": "Check pending work",
-    "trackYourWork": "Track your work",
-    "viewGrades": "View Grades",
-    "checkScores": "Check your scores",
-    "reportIssue": "Report Issue",
-    "createAssignment": "Create Assignment",
-    "addNewPractical": "Add new practical",
-    "reviewPending": "Review Pending",
-    "gradeSubmissions": "Grade submissions",
-    "manageClasses": "Manage Classes",
-    "viewStudents": "View students",
-    "shareWithStudents": "Share with students",
-    "manageComputerLabs": "Manage computer labs",
-    "userManagement": "User Management",
-    "manageAllUsers": "Manage all users",
-    "importStudents": "Import Students",
-    "bulkImportCsv": "Bulk import CSV",
-    "upcomingDeadlines": "Upcoming Deadlines",
-    "noUpcomingDeadlines": "No upcoming deadlines",
-    "submitted": "Submitted",
-    "revision": "Revision",
-    "pending": "Pending",
-    "daysLeft": "{{days}}d {{hours}}h left",
-    "hoursLeft": "{{hours}}h left",
-    "dueSoon": "Due soon!"
-  },
-  "classes": {
-    "title": "Classes",
-    "addClass": "Add Class",
-    "searchClasses": "Search classes...",
-    "noClassesFound": "No classes found",
-    "createFirst": "Create your first class to get started.",
-    "noClassesAvailable": "No classes available.",
-    "students": "students",
-    "teacher": "Teacher",
-    "view": "View",
-    "general": "General",
-    "currentSession": "Current Session",
-    "historical": "Historical",
-    "sessionHint": "Use the session selector in header to change",
-    "createClass": "Create Class",
-    "className": "Class Name",
-    "classNameHindi": "Class Name (Hindi)",
-    "gradeLevel": "Grade Level",
-    "section": "Section",
-    "stream": "Stream",
-    "classTeacher": "Class Teacher",
-    "selectTeacher": "Select a teacher",
-    "creating": "Creating...",
-    "noTeachersFound": "No teachers found",
-    "groups": "Groups",
-    "noGroups": "No groups created",
-    "createGroup": "Create Group",
-    "autoGenerate": "Auto Generate",
-    "assignedPc": "Assigned PC",
-    "members": "members",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "deleteGroup": "Delete Group",
-    "groupName": "Group Name",
-    "classDetails": "Class Details",
-    "enrolledStudents": "Enrolled Students",
-    "manageStudents": "Manage Students"
-  },
   "assignments": {
-    "title": "Assignments",
-    "createAssignment": "Create Assignment",
-    "searchAssignments": "Search assignments...",
-    "allStatus": "All Status",
-    "draft": "Draft",
-    "published": "Published",
-    "archived": "Archived",
-    "noAssignmentsFound": "No assignments found",
-    "createFirst": "Create your first assignment to get started.",
-    "noAssignmentsYet": "No assignments have been assigned to you yet.",
-    "scheduled": "Scheduled",
-    "created": "Created",
-    "maxMarks": "Max Marks",
-    "publish": "Publish",
-    "submit": "Submit",
-    "deleteAssignment": "Delete Assignment",
-    "deleteConfirm": "Are you sure you want to delete this? This action cannot be undone.",
-    "experimentNumber": "Experiment #",
-    "assignmentType": "Type",
-    "dueDate": "Due Date",
-    "assignTo": "Assign To",
-    "selectClass": "Select Class",
-    "selectGroup": "Select Group",
-    "instructions": "Instructions",
-    "attachments": "Attachments",
-    "practicalNumber": "Practical #",
-    "aim": "Aim",
-    "apparatus": "Apparatus",
-    "procedure": "Procedure",
-    "observation": "Observation",
-    "result": "Result",
-    "viva": "Viva"
-  },
-  "submissions": {
-    "title": "Submissions",
-    "mySubmissions": "My Submissions",
-    "forReview": "Submissions for Review",
-    "all": "All",
-    "submitted": "Submitted",
-    "underReview": "Under Review",
-    "graded": "Graded",
-    "needsRevision": "Needs Revision",
-    "returned": "Returned",
-    "noSubmissions": "No submissions found",
-    "noPending": "No submissions pending for review.",
-    "noSubmitted": "You have not submitted any assignments yet.",
-    "revision": "Revision #",
-    "student": "Student",
-    "assignedBy": "Assigned by",
-    "submittedAt": "Submitted",
-    "lateBy": "Late by",
-    "days": "days",
-    "marks": "Marks",
-    "gradedAt": "Graded",
-    "by": "by",
-    "review": "Review",
-    "view": "View"
-  },
-  "grades": {
-    "title": "Grades",
-    "myGrades": "My Grades",
-    "grading": "Grading",
-    "averageScore": "Average Score",
-    "passed": "Passed",
-    "totalGraded": "Total Graded",
-    "allGrades": "All Grades",
-    "published": "Published",
-    "unpublished": "Unpublished",
-    "noGradesYet": "No grades yet",
-    "gradesWillAppear": "Your grades will appear here once your submissions are graded and published.",
-    "assignedGrades": "Grades you assign will appear here.",
-    "gradeScale": "Current Grade Scale",
-    "viewCriteria": "View grading criteria and marks distribution",
-    "gradeDistribution": "Grade Distribution",
-    "viewHistory": "View Changes History",
-    "gradeRange": "Range",
-    "gradePoints": "Grade Points",
-    "practical": "Practical",
-    "output": "Output",
-    "viva": "Viva",
-    "latePenalty": "Late Penalty",
-    "final": "Final",
-    "outOf": "out of",
-    "codeFeedback": "Code Feedback",
-    "remarks": "Remarks",
-    "publishToStudent": "Publish to Student",
-    "history": "History",
-    "modificationHistory": "Grade Modification History",
-    "currentGrade": "Current Grade",
-    "lastModified": "Last Modified",
-    "before": "Before",
-    "after": "After",
-    "noModifications": "No modifications yet",
-    "reason": "Reason",
-    "revisionHistory": "Grade Scale Revision History",
-    "revision": "Revision",
-    "modified": "modified",
-    "status": "Status",
-    "created": "created",
-    "updated": "updated",
-    "deleted": "deleted"
+    "aim": "ਟੀਚਾ",
+    "allStatus": "ਸਾਰੀ ਸਥਿਤੀ",
+    "apparatus": "ਉਪਕਰਣ",
+    "archived": "ਪੁਰਾਲੇਖਬੱਧ",
+    "assignTo": "ਨੂੰ ਸੌਂਪੋ",
+    "assignmentType": "ਦੀ ਕਿਸਮ",
+    "attachments": "ਅਟੈਚਮੈਂਟ",
+    "createAssignment": "ਅਸਾਈਨਮੈਂਟ ਬਣਾਓ",
+    "maxMarks": "ਵੱਧ ਤੋਂ ਵੱਧ ਅੰਕ",
+    "createFirst": "ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਆਪਣਾ ਪਹਿਲਾ ਅਸਾਈਨਮੈਂਟ ਬਣਾਓ।",
+    "created": "ਬਣਾਇਆ ਗਿਆ",
+    "deleteAssignment": "ਅਸਾਈਨਮੈਂਟ ਮਿਟਾਓ",
+    "deleteConfirm": "ਕੀ ਤੁਸੀਂ ਪੱਕਾ ਇਸਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇਸ ਕਾਰਵਾਈ ਨੂੰ ਅਣਕੀਤਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ।",
+    "draft": "ਡਰਾਫਟ",
+    "dueDate": "ਅਦਾਇਗੀ ਤਾਰੀਖ",
+    "experimentNumber": "ਪ੍ਰਯੋਗ #",
+    "instructions": "ਹਦਾਇਤਾਂ",
+    "noAssignmentsFound": "ਕੋਈ ਅਸਾਈਨਮੈਂਟ ਨਹੀਂ ਮਿਲੀ",
+    "noAssignmentsYet": "ਤੁਹਾਨੂੰ ਅਜੇ ਤੱਕ ਕੋਈ ਵੀ ਕੰਮ ਸੌਂਪਿਆ ਨਹੀਂ ਗਿਆ ਹੈ।",
+    "observation": "ਨਿਰੀਖਣ",
+    "practicalNumber": "ਵਿਹਾਰਕ #"
   }
 }
